[qemu] Change location of the runvirt Java plugin

--- a/core/modules/qemu/module.conf
+++ b/core/modules/qemu/module.conf
@@ -8,3 +8,7 @@ REQUIRED_MODULES="
 REQUIRED_BINARIES=""
 REQUIRED_LIBRARIES=""
 REQUIRED_DIRECTORIES=""
+
+REQUIRED_FILES="
+	/opt/openslx/vmchooser/plugins/qemu/runvirt-plugin-qemu.jar
+"
