Add installer mode for stage4

--- a/core/modules/cron/module.conf
+++ b/core/modules/cron/module.conf
@@ -1,4 +1,7 @@
 #!/bin/bash
+REQUIRED_MODULES="
+	slx-log
+"
 REQUIRED_GIT="https://github.com/cronie-crond/cronie.git"
 REQUIRED_COMMIT="d582556168e740fbd19e777a6733b404084e69d8"
 REQUIRED_BINARIES="
