--- a/core/modules/network-online-slx-targets/data/etc/systemd/system/network-online.target.d/00-slx-targets.conf
+++ b/core/modules/network-online-slx-targets/data/etc/systemd/system/network-online.target.d/00-slx-targets.conf
@@ -1,3 +1,4 @@
 [Unit]
-Wants=network-gateway.target network-dns.target
+Wants=network-gateway.target network-dns.target network.target
 Before=network-gateway.target network-dns.target
+After=network.target
