--- a/core/modules/printergui/module.conf
+++ b/core/modules/printergui/module.conf
@@ -1,4 +1,7 @@
 #!/bin/bash
+REQUIRED_MODULES="
+	slxlog
+"
 REQUIRED_GIT="git://git.openslx.org/openslx-ng/printergui.git"
 REQUIRED_COMMIT="HEAD"
 REQUIRED_BINARIES="
