--- a/core/modules/safe-mode/data/etc/systemd/system/exam.service
+++ b/core/modules/safe-mode/data/etc/systemd/system/exam.service
@@ -1,7 +1,8 @@
 [Unit]
 Description=Sets up safe mode (no magic keys, no tty switch, no openbox menu)
 DefaultDependencies=no
-Before=graphical.target display-manager.target
+Before=basic.target systemd-logind.service
+After=systemd-sysctl.service
 
 [Service]
 Type=oneshot
