[slxlog] Add module

--- a/core/modules/cron/module.conf
+++ b/core/modules/cron/module.conf
@@ -1,6 +1,6 @@
 #!/bin/bash
 REQUIRED_MODULES="
-	slx-log
+	slxlog
 "
 REQUIRED_GIT="https://github.com/cronie-crond/cronie.git"
 REQUIRED_COMMIT="d582556168e740fbd19e777a6733b404084e69d8"
