Use autoclone where possible

--- a/core/modules/busybox/module.conf
+++ b/core/modules/busybox/module.conf
@@ -1,6 +1,5 @@
 #!/bin/bash
-REQUIRED_GIT="git://git.busybox.net/busybox"
-REQUIRED_BRANCH="1_31_1"
+REQUIRED_GIT="git://git.busybox.net/busybox||1_31_1"
 REQUIRED_BINARIES="busybox"
 REQUIRED_DIRECTORIES="
 	/
