--- a/core/modules/cron/module.conf
+++ b/core/modules/cron/module.conf
@@ -2,8 +2,7 @@
 REQUIRED_MODULES="
 	slxlog
 "
-REQUIRED_GIT="https://github.com/cronie-crond/cronie.git"
-REQUIRED_COMMIT="d582556168e740fbd19e777a6733b404084e69d8"
+REQUIRED_GIT="https://github.com/cronie-crond/cronie.git||d582556168e740fbd19e777a6733b404084e69d8"
 REQUIRED_BINARIES="
 	crond
 "
