--- a/core/modules/redsocks/module.conf
+++ b/core/modules/redsocks/module.conf
@@ -1,6 +1,5 @@
 #!/bin/bash
-REQUIRED_GIT="git://github.com/darkk/redsocks.git"
-REQUIRED_REVISION="2e3f648809e27cc19cb7a8702f19b553a7ef9a81"
+REQUIRED_GIT="git://github.com/darkk/redsocks.git||2e3f648809e27cc19cb7a8702f19b553a7ef9a81"
 REQUIRED_BINARIES="
 	redsocks
 "
