--- a/core/modules/usbguard/module.conf
+++ b/core/modules/usbguard/module.conf
@@ -1,8 +1,7 @@
 #!/bin/bash
-REQUIRED_GIT="https://github.com/dkopecek/usbguard.git"
+REQUIRED_GIT="https://github.com/dkopecek/usbguard.git||4ba9fbb337da439a1bcff6886847fb24b3df95b3"
 REQUIRED_LIBSODIUM_URL="https://download.libsodium.org/libsodium/releases/libsodium-1.0.16.tar.gz"
 REQUIRED_LIBSODIUM_UNTAR_NAME="libsodium-1.0.16"
-REQUIRED_COMMIT="4ba9fbb337da439a1bcff6886847fb24b3df95b3"
 REQUIRED_BINARIES="usbguard usbguard-daemon"
 REQUIRED_LIBRARIES=""
 REQUIRED_DIRECTORIES="/"
