[dhcpc-busybox] Add option to ignore secondary interfaces, improve
.... resolv.conf awk generator

--- a/core/modules/dhcpc-busybox/data/etc/systemd/system/udhcpc@.service
+++ b/core/modules/dhcpc-busybox/data/etc/systemd/system/udhcpc@.service
@@ -3,8 +3,7 @@ Description=DHCP Client for %i
 After=systemd-tmpfiles-setup.service
 
 [Service]
-Type=forking
-PIDFile=/run/udhcpc/udhcpc.%i.pid
-ExecStart=/opt/openslx/scripts/systemd-udhcpc++ %i
-ExecStopPost=/opt/openslx/bin/rm /run/udhcpc/udhcpc.%i.pid
+Type=simple
+ExecStart=/opt/openslx/scripts/systemd-udhcpc %i
+Restart=on-failure
 
