[disk-partitions] New module, modularize partition setup

--- a/core/modules/slx-issue/data/etc/systemd/system/update-etc_issue.service
+++ b/core/modules/slx-issue/data/etc/systemd/system/update-etc_issue.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Update /etc/issue
-After=setup-partitions.service
+After=tmp.target
 Before=getty-pre.target getty.target shutdown.target
 DefaultDependencies=no
 
