[dnbd3-proxy-mode/disk-partitions] Add persistent.target

--- a/core/modules/disk-partitions/data/etc/systemd/system/setup-partitions.service
+++ b/core/modules/disk-partitions/data/etc/systemd/system/setup-partitions.service
@@ -1,7 +1,8 @@
 [Unit]
 Description=Setup local disk partitions (persistent, swap)
 After=systemd-udev-settle.service systemd-udevd.service
-Wants=tmp.target
+Wants=tmp.target persistent.target
+Before=persistent.target
 DefaultDependencies=no
 
 [Service]
