--- a/core/modules/dunst/module.conf
+++ b/core/modules/dunst/module.conf
@@ -5,7 +5,7 @@ REQUIRED_BINARIES="
 "
 REQUIRED_DIRECTORIES="
 	/usr/share/dbus-1
-	/lib/systemd/user
+	/usr/lib/systemd/user
 "
 REQUIRED_FILES="
 "
