[dbus] Include /usr/share/dbus-1

--- a/core/modules/dbus/module.conf
+++ b/core/modules/dbus/module.conf
@@ -10,6 +10,7 @@ REQUIRED_BINARIES="
 "
 REQUIRED_DIRECTORIES="
 	/etc/dbus-1
+	/usr/share/dbus-1
 "
 REQUIRED_FILES="
 	/lib/systemd/system/dbus.service
