--- a/core/modules/lightdm/data/etc/systemd/system/lightdm.service
+++ b/core/modules/lightdm/data/etc/systemd/system/lightdm.service
@@ -1,7 +1,10 @@
 [Unit]
 Description=LightDM Display Manager
 Conflicts=getty@tty7.service
-After=dev-tty7.device systemd-user-sessions.service load-gfx-driver.service setup-slx-addon@vmware.service setup-slx-addon@virtualbox.service
+After=dev-tty7.device systemd-user-sessions.service load-gfx-driver.service
+After=setup-slx-addon@vmware.service setup-slx-addon@virtualbox.service
+# So the hostname won't change later on an mess up X11 access
+After=network.target
 
 [Service]
 ExecStart=/usr/sbin/lightdm
