[qemu] Use existing distro service to setup QEMU/KVM properly

--- a/core/modules/qemu/data/etc/systemd/system/qemu.service
+++ b/core/modules/qemu/data/etc/systemd/system/qemu.service
@@ -2,8 +2,10 @@
 Description=Sets up the QEMU hypervisor
 Requires=run-virt-env.service
 Requires=libvirtd.service
+Requires=qemu-kvm.service
 After=run-virt-env.service
 After=libvirtd.service
+After=qemu-kvm.service
 
 [Service]
 Type=oneshot
