[hardware-stats] Include new json-based hw reporting
Fetch scripts from cgit for now. A bit ugly but this needs to be
re-organized first.

--- a/core/modules/hardware-stats/module.conf
+++ b/core/modules/hardware-stats/module.conf
@@ -8,3 +8,7 @@ REQUIRED_BINARIES="
 	blockdev
 "
 
+REQUIRED_FILES="
+	/opt/openslx/system-check/collect_hw_info_json.py
+	/opt/openslx/system-check/dmiparser.py
+"
