[qemu-src] Add module for QEMU source build

--- a/core/modules/qemu/data/etc/systemd/system/qemu.service
+++ b/core/modules/qemu/data/etc/systemd/system/qemu.service
@@ -11,3 +11,6 @@ After=qemu-kvm.service
 Type=oneshot
 RemainAfterExit=yes
 ExecStart=/opt/openslx/scripts/systemd-qemu_env start
+
+[Install]
+WantedBy=graphical.target
