[virt-viewer] Add new module to build virt-viewer from source

--- a/core/modules/virt-viewer/module.conf
+++ b/core/modules/virt-viewer/module.conf
@@ -1,5 +1,10 @@
 #!/bin/bash
 
+REQUIRED_MODULES="
+	libvirt-src
+	libvirt-glib
+"
+
 REQUIRED_GIT="
 	https://gitlab.com/virt-viewer/virt-viewer.git||v10.0
 "
