[looking-glass-client] Use CMake's generated install target for installation

--- a/core/modules/looking-glass-client/module.conf
+++ b/core/modules/looking-glass-client/module.conf
@@ -1,7 +1,8 @@
 #!/bin/bash
-REQUIRED_BINARIES="
-	looking-glass-client
-"
+
 REQUIRED_GIT="
 	https://github.com/gnif/LookingGlass.git||Release/B4
 "
+
+# copy everything since there is a clean installation done by 'make install'
+REQUIRED_DIRECTORIES="/"
