[sshd] Properly install sshd

--- a/core/modules/sshd/module.conf
+++ b/core/modules/sshd/module.conf
@@ -1,4 +1,9 @@
 #!/bin/bash
-REQUIRED_BINARIES="sshd"
 REQUIRED_LIBRARIES=""
-REQUIRED_DIRECTORIES=""
+REQUIRED_BINARIES="
+	sshd
+"
+REQUIRED_FILES="
+	/lib/systemd/system/ssh.service
+	/usr/lib/openssh/ssh-session-cleanup
+"
