--- a/core/modules/sshd/data/etc/systemd/system/sshd.service
+++ b/core/modules/sshd/data/etc/systemd/system/sshd.service
@@ -1,10 +1,1 @@
-[Unit]
-Description=OpenSSH Daemon
-Requires=systemd-tmpfiles-setup.service
-After=systemd-tmpfiles-setup.service
-
-[Service]
-ExecStart=/usr/sbin/sshd -D
-ExecReload=/bin/kill -HUP $MAINPID
-KillMode=process
-Restart=always
+/lib/systemd/system/ssh.service
