Want even more kernel config

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -28,6 +28,8 @@ CONFIG_BACKLIGHT_LP855X=y
 CONFIG_BACKLIGHT_PROGEAR=y
 CONFIG_BACKLIGHT_SAHARA=y
 CONFIG_BE2NET=m
+CONFIG_BLOCK=y
+CONFIG_BLK_DEV=y
 CONFIG_BLK_DEV_CRYPTOLOOP=n
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
@@ -650,7 +652,6 @@ CONFIG_U_SERIAL_CONSOLE=y
 CONFIG_USERIO=m
 CONFIG_SYSTEM_REVOCATION_KEYS=n
 CONFIG_DEBUG_INFO_BTF=n
-CONFIG_KVM_VFIO=y
 CONFIG_BLK_MQ_VIRTIO=y
 CONFIG_VFIO_IOMMU_TYPE1=y
 CONFIG_VFIO_VIRQFD=y
@@ -664,4 +665,18 @@ CONFIG_VFIO_PCI_IGD=y
 CONFIG_VFIO_MDEV=m
 CONFIG_VFIO_MDEV_DEVICE=m
 CONFIG_VIRTIO=y
+CONFIG_VIRTUALIZATION=y
+CONFIG_KVM=y
+CONFIG_KVM_VFIO=y
+CONFIG_KVM_GENERIC_DIRTYLOG_READ_PROTECT=y
+CONFIG_KVM_COMPAT=y
+CONFIG_KVM_GUEST=y
+CONFIG_KVM_DEBUG_FS=y
+CONFIG_KVM_MMIO=y
+CONFIG_KVM_ASYNC_PF=y
+CONFIG_KVM_AMD=m
+CONFIG_KVM_INTEL=m
 CONFIG_DRM_I915_GVT_KVMGT=m
+CONFIG_CRYPTO=y
+CONFIG_ZSMALLOC=y
+CONFIG_CRYPTO_LZO=y
