--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -676,7 +676,9 @@ CONFIG_KVM_MMIO=y
 CONFIG_KVM_ASYNC_PF=y
 CONFIG_KVM_AMD=m
 CONFIG_KVM_INTEL=m
+CONFIG_DRM_I915_GVT=y
 CONFIG_DRM_I915_GVT_KVMGT=m
 CONFIG_CRYPTO=y
 CONFIG_ZSMALLOC=y
 CONFIG_CRYPTO_LZO=y
+CONFIG_HAS_IOMEM=y
