kernel config: Enable NVMe

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -682,3 +682,17 @@ CONFIG_CRYPTO=y
 CONFIG_ZSMALLOC=y
 CONFIG_CRYPTO_LZO=y
 CONFIG_HAS_IOMEM=y
+CONFIG_NVME_CORE=m
+CONFIG_NVME_MULTIPATH=y
+CONFIG_NVME_HWMON=y
+CONFIG_NVME_FABRICS=m
+CONFIG_NVME_RDMA=m
+CONFIG_NVME_FC=m
+CONFIG_NVME_TCP=m
+CONFIG_NVME_TARGET=m
+CONFIG_NVME_TARGET_PASSTHRU=y
+CONFIG_NVME_TARGET_LOOP=m
+CONFIG_NVME_TARGET_RDMA=m
+CONFIG_NVME_TARGET_FC=m
+CONFIG_NVME_TARGET_TCP=m
+
