--- a/core/modules/hardware-stats/data/etc/systemd/system/hardware-stats.service
+++ b/core/modules/hardware-stats/data/etc/systemd/system/hardware-stats.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Gather statistics about this machine and send to boot server
+Description=Gather hardware information about this machine
 After=tmp.target mount-vm-store.service network.target run-virt-env.service
 Wants=tmp.target system-check.service
 Before=system-check.service
@@ -8,5 +8,4 @@ Before=system-check.service
 Type=oneshot
 ExecStart=/opt/openslx/scripts/systemd-hardware_stats
 RemainAfterExit=yes
-ExecStop=/opt/openslx/scripts/shutdown-system_usage_update
 
