kernel config: CONFIG_BLK_DEV_NVME=y

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -93,6 +93,7 @@ CONFIG_BLK_DEV_LOOP_FILE_FMT_QCOW=y
 CONFIG_BLK_DEV_LOOP_FILE_FMT_RAW=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
 CONFIG_BLK_DEV_NBD=y
+CONFIG_BLK_DEV_NVME=y
 CONFIG_BLK_DEV_PCIESSD_MTIP32XX=y
 CONFIG_BLK_MQ_VIRTIO=y
 CONFIG_BLOCK=y
