[vmchooser2] i3: Append (keine GUI) instead of replacing entire title

--- a/core/modules/vmchooser2/data/opt/openslx/vmchooser/config/xsessions.conf
+++ b/core/modules/vmchooser2/data/opt/openslx/vmchooser/config/xsessions.conf
@@ -2,5 +2,5 @@ t/xfce.*session/i/-10
 t/(kde|plasma)/i/-8/-KDE 
 t/(gnome|ubuntu)/i/-6/Gnome Shell
 t/openbox/i/-4/+ (minimale GUI)
-t/i3/i/-2/i3 (keine GUI)
+t/^i3/i/-2/+ (keine GUI)
 f/pvs2mgr/i/99
