kernel config: Add TUN/TAP and other network stuff

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -204,6 +204,7 @@ CONFIG_ENIC=m
 CONFIG_EPIC100=m
 CONFIG_ETHERNET=y
 CONFIG_ETHOC=m
+CONFIG_ETHTOOL_NETLINK=y
 CONFIG_EXPORTFS=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
@@ -226,6 +227,7 @@ CONFIG_HP100=m
 CONFIG_HSA_AMD=y
 CONFIG_HWSPINLOCK=y
 CONFIG_HYPERV_IOMMU=y
+CONFIG_HYPERV_VSOCKETS=m
 CONFIG_I2C_AMD_MP2=m
 CONFIG_I2C_BCM2048=m
 CONFIG_I2C_MUX_PINCTRL=m
@@ -235,6 +237,7 @@ CONFIG_IGBVF=m
 CONFIG_IGB_DCA=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
+CONFIG_INET=y
 CONFIG_INPUT_BMA150=m
 CONFIG_INPUT_CMA3000=m
 CONFIG_INPUT_CMA3000_I2C=m
@@ -330,9 +333,11 @@ CONFIG_MTRR_SANITIZER_ENABLE_DEFAULT=1
 CONFIG_MYRI10GE=m
 CONFIG_NATSEMI=m
 CONFIG_NE2K_PCI=m
+CONFIG_NETDEVICES=y
 CONFIG_NETWORK_PHY_TIMESTAMPING=y
 CONFIG_NETXEN_NIC=m
 CONFIG_NET_CALXEDA_XGMAC=m
+CONFIG_NET_CORE=y
 CONFIG_NET_PACKET_ENGINE=y
 CONFIG_NET_TULIP=y
 CONFIG_NET_VENDOR_3COM=y
@@ -574,6 +579,7 @@ CONFIG_TLAN=m
 CONFIG_TTY_PRINTK=y
 CONFIG_TTY_PRINTK_LEVEL=6
 CONFIG_TULIP=m
+CONFIG_TUN=y
 CONFIG_TYPHOON=m
 CONFIG_UIO=y
 CONFIG_ULI526X=m
@@ -665,6 +671,7 @@ CONFIG_USB_ZERO=m
 CONFIG_USERIO=m
 CONFIG_U_SERIAL_CONSOLE=y
 CONFIG_VERSION_SIGNATURE=n
+CONFIG_VETH=y
 CONFIG_VFIO=y
 CONFIG_VFIO_IOMMU_TYPE1=y
 CONFIG_VFIO_MDEV=m
@@ -685,9 +692,13 @@ CONFIG_VIRTIO=y
 CONFIG_VIRTIO_BLK=y
 CONFIG_VIRTIO_BLK_SCSI=y
 CONFIG_VIRTIO_NET=y
+CONFIG_VIRTIO_VSOCKETS=m
 CONFIG_VIRTUALIZATION=y
+CONFIG_VMWARE_VMCI_VSOCKETS=m
 CONFIG_VMXNET3=y
 CONFIG_VORTEX=m
+CONFIG_VSOCKETS=m
+CONFIG_VSOCKETS_LOOPBACK=m
 CONFIG_VXGE=m
 CONFIG_WINBOND_840=m
 CONFIG_X86_5LEVEL=n
