kernel config: Add more SATA devices

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -438,10 +438,27 @@ CONFIG_RAID_ATTRS=m
 CONFIG_RD_XZ=y
 CONFIG_ROCKCHIP_PHY=y
 CONFIG_S2IO=m
+CONFIG_SATA_ACARD_AHCI=m
+CONFIG_SATA_AHCI=m
 CONFIG_SATA_AHCI_PLATFORM=m
 CONFIG_SATA_DWC=m
 CONFIG_SATA_DWC_OLD_DMA=y
+CONFIG_SATA_HOST=y
 CONFIG_SATA_INIC162X=m
+CONFIG_SATA_MOBILE_LPM_POLICY=3
+CONFIG_SATA_MV=m
+CONFIG_SATA_PMP=y
+CONFIG_SATA_PROMISE=m
+CONFIG_SATA_QSTOR=m
+CONFIG_SATA_SIL24=m
+CONFIG_SATA_SIL=m
+CONFIG_SATA_SIS=m
+CONFIG_SATA_SVW=m
+CONFIG_SATA_SX4=m
+CONFIG_SATA_ULI=m
+CONFIG_SATA_VIA=m
+CONFIG_SATA_VITESSE=m
+CONFIG_SATA_ZPODD=y
 CONFIG_SC92031=m
 CONFIG_SCSI=y
 CONFIG_SCSI_3W_9XXX=m
