kernel config: Add fuison mpt scsi drivers

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -86,12 +86,14 @@ CONFIG_BE2NET=m
 CONFIG_BLK_CPQ_CISS_DA=m
 CONFIG_BLK_DEV=y
 CONFIG_BLK_DEV_CRYPTOLOOP=n
+CONFIG_BLK_DEV_DM=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_BLK_DEV_INTEGRITY_T10=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_FILE_FMT_QCOW=y
 CONFIG_BLK_DEV_LOOP_FILE_FMT_RAW=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
+CONFIG_BLK_DEV_MD=y
 CONFIG_BLK_DEV_NBD=y
 CONFIG_BLK_DEV_NVME=y
 CONFIG_BLK_DEV_PCIESSD_MTIP32XX=y
@@ -148,6 +150,7 @@ CONFIG_DELL_UART_BACKLIGHT=m
 CONFIG_DL2K=m
 CONFIG_DM9102=m
 CONFIG_DMI_SCAN_MACHINE_NON_EFI_FALLBACK=y
+CONFIG_DM_CRYPT=y
 CONFIG_DM_SNAPSHOT=y
 CONFIG_DM_THIN_PROVISIONING=y
 CONFIG_DNET=m
@@ -200,6 +203,7 @@ CONFIG_EFI_SECURE_BOOT_LOCK_DOWN=y
 CONFIG_EFI_SIGNATURE_LIST_PARSER=y
 CONFIG_EFI_STUB=y
 CONFIG_EFI_VARS=y
+CONFIG_ENCRYPTED_KEYS=y
 CONFIG_ENIC=m
 CONFIG_EPIC100=m
 CONFIG_ETHERNET=y
@@ -217,6 +221,14 @@ CONFIG_FB_VESA=y
 CONFIG_FEALNX=m
 CONFIG_FORCEDETH=m
 CONFIG_FUSE_FS=y
+CONFIG_FUSION=y
+CONFIG_FUSION_CTL=m
+CONFIG_FUSION_FC=m
+CONFIG_FUSION_LAN=m
+CONFIG_FUSION_LOGGING=y
+CONFIG_FUSION_MAX_SGE=128
+CONFIG_FUSION_SAS=m
+CONFIG_FUSION_SPI=m
 CONFIG_GENERIC_GPIO=y
 CONFIG_GPIOLIB=y
 CONFIG_HAPPYMEAL=m
@@ -314,6 +326,7 @@ CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_LCD_PLATFORM=y
 CONFIG_LIBCRC32C=y
 CONFIG_LOCALVERSION="-openslx"
+CONFIG_MD=y
 CONFIG_MDIO=y
 CONFIG_MEDIA_RC_SUPPORT=y
 CONFIG_MICROCODE=y
