kernel config: Add new NICs, remove some very old NICs
Old 100mbit NICs are probably not worth supporting

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -1,9 +1,7 @@
 CONFIG_64BIT_TIME=y
-CONFIG_8139CP=m
-CONFIG_8139TOO=m
-CONFIG_8139TOO_8129=y
-CONFIG_8139TOO_PIO=y
-CONFIG_8139TOO_TUNE_TWISTER=y
+CONFIG_8139CP=n
+CONFIG_8139TOO=n
+CONFIG_ACENIC=m
 CONFIG_ACENIC=m
 CONFIG_ACPI_AC=y
 CONFIG_ACPI_ADXL=y
@@ -14,8 +12,12 @@ CONFIG_ACPI_THERMAL=y
 CONFIG_AGP_SIS=y
 CONFIG_AGP_VIA=y
 CONFIG_ALLOW_LOCKDOWN_LIFT=y
+CONFIG_ALTERA_TSE=m
+CONFIG_AMD8111_ETH=n
 CONFIG_AMD_IOMMU_V2=y
+CONFIG_AMD_XGBE=m
 CONFIG_ANDROID_BINDER_DEVICES=n
+CONFIG_AQTION=m
 CONFIG_ARCH_CLOCKSOURCE_INIT=y
 CONFIG_ARCH_HAS_MMIO_FLUSH=y
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
@@ -23,15 +25,13 @@ CONFIG_ATL1=m
 CONFIG_ATL1C=m
 CONFIG_ATL1E=m
 CONFIG_ATL2=m
-CONFIG_ATP=m
+CONFIG_ATL2=n
+CONFIG_ATP=n
 CONFIG_AUFS_BDEV_LOOP=y
 CONFIG_AUFS_BRANCH_MAX_127=y
 CONFIG_AUFS_FS=y
 CONFIG_AUFS_SBILIST=y
-CONFIG_B44=m
-CONFIG_B44_PCI=y
-CONFIG_B44_PCICORE_AUTOSELECT=y
-CONFIG_B44_PCI_AUTOSELECT=y
+CONFIG_B44=n
 CONFIG_BACKLIGHT_88PM860X=m
 CONFIG_BACKLIGHT_AAT2870=m
 CONFIG_BACKLIGHT_ADP5520=m
@@ -191,9 +191,10 @@ CONFIG_DRM_VIA=m
 CONFIG_DRM_VIRTIO_GPU=m
 CONFIG_DRM_VMWGFX=m
 CONFIG_DRM_VMWGFX_FBCON=y
+CONFIG_DWMAC_INTEL=m
 CONFIG_E1000=m
 CONFIG_E1000E=m
-CONFIG_E100=m
+CONFIG_E100=n
 CONFIG_EFI=y
 CONFIG_EFIVAR_FS=y
 CONFIG_EFI_ALLOW_SECURE_BOOT_EXIT=y
@@ -203,9 +204,10 @@ CONFIG_EFI_SECURE_BOOT_LOCK_DOWN=y
 CONFIG_EFI_SIGNATURE_LIST_PARSER=y
 CONFIG_EFI_STUB=y
 CONFIG_EFI_VARS=y
+CONFIG_EL3=n
 CONFIG_ENCRYPTED_KEYS=y
 CONFIG_ENIC=m
-CONFIG_EPIC100=m
+CONFIG_EPIC100=n
 CONFIG_ETHERNET=y
 CONFIG_ETHOC=m
 CONFIG_ETHTOOL_NETLINK=y
@@ -219,6 +221,8 @@ CONFIG_EXYNOS_VIDEO=y
 CONFIG_FB_BOOT_VESA_SUPPORT=y
 CONFIG_FB_VESA=y
 CONFIG_FEALNX=m
+CONFIG_FEALNX=n
+CONFIG_FM10K=m
 CONFIG_FORCEDETH=m
 CONFIG_FUSE_FS=y
 CONFIG_FUSION=y
@@ -231,9 +235,10 @@ CONFIG_FUSION_SAS=m
 CONFIG_FUSION_SPI=m
 CONFIG_GENERIC_GPIO=y
 CONFIG_GPIOLIB=y
-CONFIG_HAPPYMEAL=m
+CONFIG_HAPPYMEAL=n
 CONFIG_HAS_IOMEM=y
 CONFIG_HID_GENERIC=y
+CONFIG_HINIC=m
 CONFIG_HIO=y
 CONFIG_HP100=m
 CONFIG_HSA_AMD=y
@@ -244,9 +249,13 @@ CONFIG_I2C_AMD_MP2=m
 CONFIG_I2C_BCM2048=m
 CONFIG_I2C_MUX_PINCTRL=m
 CONFIG_I2C_NVIDIA_GPU=m
+CONFIG_I40E=m
+CONFIG_I40EVF=m
+CONFIG_ICE=m
 CONFIG_IGB=m
 CONFIG_IGBVF=m
 CONFIG_IGB_DCA=y
+CONFIG_IGC=m
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_INET=y
@@ -337,8 +346,10 @@ CONFIG_MICROCODE_INTEL=y
 CONFIG_MICROCODE_INTEL_EARLY=y
 CONFIG_MICROCODE_OLD_INTERFACE=y
 CONFIG_MLX4_CORE=m
-CONFIG_MLX4_DEBUG=y
+CONFIG_MLX4_CORE_GEN2=y
 CONFIG_MLX4_EN=m
+CONFIG_MLX5_CORE=m
+CONFIG_MLX5_CORE_EN=y
 CONFIG_MMC=y
 CONFIG_MODULE_SIG_KEY=n
 CONFIG_MOUSE_PS2_TOUCHKIT=y
@@ -351,51 +362,65 @@ CONFIG_NETWORK_PHY_TIMESTAMPING=y
 CONFIG_NETXEN_NIC=m
 CONFIG_NET_CALXEDA_XGMAC=m
 CONFIG_NET_CORE=y
+CONFIG_NET_FAILOVER=y
 CONFIG_NET_PACKET_ENGINE=y
 CONFIG_NET_TULIP=y
-CONFIG_NET_VENDOR_3COM=y
-CONFIG_NET_VENDOR_8390=y
-CONFIG_NET_VENDOR_ADAPTEC=y
+CONFIG_NET_VENDOR_3COM=n
+CONFIG_NET_VENDOR_8390=n
+CONFIG_NET_VENDOR_ADAPTEC=n
 CONFIG_NET_VENDOR_ALTEON=y
 CONFIG_NET_VENDOR_AMD=y
+CONFIG_NET_VENDOR_AQUANTIA=y
 CONFIG_NET_VENDOR_ARC=y
 CONFIG_NET_VENDOR_ATHEROS=y
 CONFIG_NET_VENDOR_AURORA=y
 CONFIG_NET_VENDOR_BROADCOM=y
 CONFIG_NET_VENDOR_BROCADE=y
 CONFIG_NET_VENDOR_CHELSIO=y
-CONFIG_NET_VENDOR_CIRRUS=y
+CONFIG_NET_VENDOR_CIRRUS=n
 CONFIG_NET_VENDOR_CISCO=y
-CONFIG_NET_VENDOR_DEC=y
+CONFIG_NET_VENDOR_DEC=n
 CONFIG_NET_VENDOR_DLINK=y
 CONFIG_NET_VENDOR_EMULEX=y
 CONFIG_NET_VENDOR_EXAR=y
 CONFIG_NET_VENDOR_FUJITSU=y
 CONFIG_NET_VENDOR_GOOGLE=y
 CONFIG_NET_VENDOR_HP=y
+CONFIG_NET_VENDOR_HUAWEI=y
+CONFIG_NET_VENDOR_I825XX=y
 CONFIG_NET_VENDOR_I825XX=y
 CONFIG_NET_VENDOR_INTEL=y
 CONFIG_NET_VENDOR_MARVELL=y
 CONFIG_NET_VENDOR_MELLANOX=y
-CONFIG_NET_VENDOR_MICREL=y
+CONFIG_NET_VENDOR_MICREL=n
+CONFIG_NET_VENDOR_MICROCHIP=n
 CONFIG_NET_VENDOR_MYRI=y
-CONFIG_NET_VENDOR_NATSEMI=y
+CONFIG_NET_VENDOR_NATSEMI=n
+CONFIG_NET_VENDOR_NETERION=y
+CONFIG_NET_VENDOR_NETRONOME=y
+CONFIG_NET_VENDOR_NI=n
 CONFIG_NET_VENDOR_NVIDIA=y
-CONFIG_NET_VENDOR_OKI=y
+CONFIG_NET_VENDOR_OKI=n
+CONFIG_NET_VENDOR_PENSANDO=n
 CONFIG_NET_VENDOR_QLOGIC=y
+CONFIG_NET_VENDOR_QUALCOMM=y
 CONFIG_NET_VENDOR_RDC=y
 CONFIG_NET_VENDOR_REALTEK=y
 CONFIG_NET_VENDOR_SEEQ=y
+CONFIG_NET_VENDOR_SILAN=n
 CONFIG_NET_VENDOR_SILAN=y
 CONFIG_NET_VENDOR_SIS=y
-CONFIG_NET_VENDOR_SMSC=y
+CONFIG_NET_VENDOR_SMSC=n
+CONFIG_NET_VENDOR_SOLARFLARE=y
 CONFIG_NET_VENDOR_STMICRO=y
 CONFIG_NET_VENDOR_SUN=y
 CONFIG_NET_VENDOR_TEHUTI=y
-CONFIG_NET_VENDOR_TI=y
+CONFIG_NET_VENDOR_TI=n
 CONFIG_NET_VENDOR_VIA=y
-CONFIG_NET_VENDOR_XILINX=y
-CONFIG_NET_VENDOR_XIRCOM=y
+CONFIG_NET_VENDOR_WIZNET=n
+CONFIG_NET_VENDOR_XILINX=n
+CONFIG_NET_VENDOR_XIRCOM=n
+CONFIG_NFP=m
 CONFIG_NFS_V4_1_MIGRATION=y
 CONFIG_NF_CONNTRACK_BRIDGE=m
 CONFIG_NF_NAT_MASQUERADE=y
@@ -404,6 +429,7 @@ CONFIG_NIU=m
 CONFIG_NOP_USB_XCEIV=m
 CONFIG_NO_HZ=y
 CONFIG_NS83820=m
+CONFIG_NVM=y
 CONFIG_NVME_CORE=m
 CONFIG_NVME_FABRICS=m
 CONFIG_NVME_FC=m
@@ -431,12 +457,17 @@ CONFIG_PCIE_DW_PLAT=y
 CONFIG_PCIE_DW_PLAT_EP=y
 CONFIG_PCIE_DW_PLAT_HOST=y
 CONFIG_PCI_ENDPOINT=y
-CONFIG_PCMCIA_XIRCOM=m
-CONFIG_PCNET32=m
+CONFIG_PCMCIA_NMCLAN=n
+CONFIG_PCMCIA_XIRCOM=n
+CONFIG_PCNET32=n
 CONFIG_PMBUS=m
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_RESTART=y
 CONFIG_POWER_SUPPLY_HWMON=y
+CONFIG_QCOM_EMAC=m
+CONFIG_QED=m
+CONFIG_QEDE=m
+CONFIG_QED_SRIOV=y
 CONFIG_QLA3XXX=m
 CONFIG_QLCNIC=m
 CONFIG_QLGE=m
@@ -554,14 +585,16 @@ CONFIG_SECURITY_NO_EXCLUSIVE_LSM=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SEEQ8005=y
 CONFIG_SFC=m
+CONFIG_SFC=m
+CONFIG_SFC_FALCON=m
 CONFIG_SFC_MCDI_MON=y
 CONFIG_SFC_MTD=y
 CONFIG_SIS190=m
-CONFIG_SIS900=m
+CONFIG_SIS900=n
 CONFIG_SKGE=m
 CONFIG_SKY2=m
-CONFIG_SMSC9420=m
-CONFIG_SMSC_PHY=y
+CONFIG_SMSC911X=n
+CONFIG_SMSC9420=n
 CONFIG_SND_BCD2000=m
 CONFIG_SND_HDA=m
 CONFIG_SND_HDA_CODEC_ANALOG=m
@@ -673,11 +706,12 @@ CONFIG_SUNGEM=m
 CONFIG_SUNGEM_PHY=y
 CONFIG_SYSTEM_REVOCATION_KEYS=n
 CONFIG_SYSTEM_TRUSTED_KEYS=n
+CONFIG_TEHUTI=m
 CONFIG_TIGON3=m
 CONFIG_TLAN=m
 CONFIG_TTY_PRINTK=y
 CONFIG_TTY_PRINTK_LEVEL=6
-CONFIG_TULIP=m
+CONFIG_TULIP=n
 CONFIG_TUN=y
 CONFIG_TYPHOON=m
 CONFIG_UIO=y
