kernel config: Update gfx config
Remove some old unsupported cards; disable exotic fbdev drivers.

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -9,8 +9,7 @@ CONFIG_ACPI_BATTERY=y
 CONFIG_ACPI_BUTTON=y
 CONFIG_ACPI_FAN=y
 CONFIG_ACPI_THERMAL=y
-CONFIG_AGP_SIS=y
-CONFIG_AGP_VIA=y
+CONFIG_AGP=n
 CONFIG_ALLOW_LOCKDOWN_LIFT=y
 CONFIG_ALTERA_TSE=m
 CONFIG_AMD8111_ETH=n
@@ -157,37 +156,37 @@ CONFIG_DNET=m
 CONFIG_DNS_RESOLVER=m
 CONFIG_DRM=y
 CONFIG_DRM_AMDGPU=m
+CONFIG_DRM_AMDGPU_CIK=y
+CONFIG_DRM_AMDGPU_SI=y
+CONFIG_DRM_AMDGPU_USERPTR=y
+CONFIG_DRM_AMD_ACP=y
+CONFIG_DRM_AMD_DC=y
 CONFIG_DRM_AMD_DC_DCN1_0=y
 CONFIG_DRM_AST=m
 CONFIG_DRM_BOCHS=m
 CONFIG_DRM_CIRRUS_QEMU=m
 CONFIG_DRM_GEM_CMA_HELPER=y
 CONFIG_DRM_GEM_SHMEM_HELPER=y
+CONFIG_DRM_GM12U320=m
 CONFIG_DRM_GMA3600=y
-CONFIG_DRM_GMA500=m
-CONFIG_DRM_GMA600=y
+CONFIG_DRM_GMA500=n
+CONFIG_DRM_GMA600=n
 CONFIG_DRM_I2C_CH7006=m
 CONFIG_DRM_I2C_SIL164=m
-CONFIG_DRM_I810=m
 CONFIG_DRM_I915=m
 CONFIG_DRM_I915_GVT=y
 CONFIG_DRM_I915_GVT_KVMGT=m
 CONFIG_DRM_KMS_HELPER=y
 CONFIG_DRM_LOAD_EDID_FIRMWARE=y
-CONFIG_DRM_MGA=m
 CONFIG_DRM_MGAG200=m
 CONFIG_DRM_NOUVEAU=m
 CONFIG_DRM_NOUVEAU_BACKLIGHT=y
-CONFIG_DRM_R128=m
+CONFIG_DRM_QXL=m
 CONFIG_DRM_RADEON=m
 CONFIG_DRM_RADEON_KMS=y
-CONFIG_DRM_SAVAGE=m
-CONFIG_DRM_SIS=m
-CONFIG_DRM_TDFX=m
 CONFIG_DRM_TTM=m
 CONFIG_DRM_UDL=m
 CONFIG_DRM_USB=m
-CONFIG_DRM_VIA=m
 CONFIG_DRM_VIRTIO_GPU=m
 CONFIG_DRM_VMWGFX=m
 CONFIG_DRM_VMWGFX_FBCON=y
@@ -218,8 +217,36 @@ CONFIG_EXT4_FS_SECURITY=y
 CONFIG_EXT4_FS_XATTR=y
 CONFIG_EXT4_USE_FOR_EXT23=y
 CONFIG_EXYNOS_VIDEO=y
-CONFIG_FB_BOOT_VESA_SUPPORT=y
-CONFIG_FB_VESA=y
+CONFIG_FB=y
+CONFIG_FB_3DFX=n
+CONFIG_FB_ARK=n
+CONFIG_FB_ATY128=n
+CONFIG_FB_ATY=n
+CONFIG_FB_CARILLO_RANCH=n
+CONFIG_FB_CARMINE=n
+CONFIG_FB_EFI=y
+CONFIG_FB_I740=n
+CONFIG_FB_INTEL=n
+CONFIG_FB_KYRO=n
+CONFIG_FB_LE80578=n
+CONFIG_FB_MATROX=n
+CONFIG_FB_MATROX_I2C=n
+CONFIG_FB_MATROX_MAVEN=n
+CONFIG_FB_NEOMAGIC=n
+CONFIG_FB_PM3=n
+CONFIG_FB_RADEON=n
+CONFIG_FB_S3=n
+CONFIG_FB_SAVAGE=n
+CONFIG_FB_SIS=n
+CONFIG_FB_SM501=n
+CONFIG_FB_SM712=n
+CONFIG_FB_SMSCUFX=n
+CONFIG_FB_TRIDENT=n
+CONFIG_FB_UDL=n
+CONFIG_FB_VESA=n
+CONFIG_FB_VIA=n
+CONFIG_FB_VOODOO1=n
+CONFIG_FB_VT8623=n
 CONFIG_FEALNX=m
 CONFIG_FEALNX=n
 CONFIG_FM10K=m
@@ -817,7 +844,7 @@ CONFIG_VFIO_PCI_MMAP=y
 CONFIG_VFIO_PCI_VGA=y
 CONFIG_VFIO_VIRQFD=y
 CONFIG_VGASTATE=y
-CONFIG_VGA_SWITCHEROO=y
+CONFIG_VGA_SWITCHEROO=n
 CONFIG_VIA_RHINE=m
 CONFIG_VIA_RHINE_MMIO=y
 CONFIG_VIA_VELOCITY=m
