kernel config: Explicitly enable certain PCI settings (IOMMU etc)

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -203,6 +203,7 @@ CONFIG_EFI_SECURE_BOOT_LOCK_DOWN=y
 CONFIG_EFI_SIGNATURE_LIST_PARSER=y
 CONFIG_EFI_STUB=y
 CONFIG_EFI_VARS=y
+CONFIG_EISA=y
 CONFIG_EL3=n
 CONFIG_ENCRYPTED_KEYS=y
 CONFIG_ENIC=m
@@ -267,6 +268,11 @@ CONFIG_HAS_IOMEM=y
 CONFIG_HID_GENERIC=y
 CONFIG_HINIC=m
 CONFIG_HIO=y
+CONFIG_HOTPLUG_PCI=y
+CONFIG_HOTPLUG_PCI_ACPI=y
+CONFIG_HOTPLUG_PCI_CPCI=y
+CONFIG_HOTPLUG_PCI_PCIE=y
+CONFIG_HOTPLUG_PCI_SHPC=y
 CONFIG_HP100=m
 CONFIG_HSA_AMD=y
 CONFIG_HWSPINLOCK=y
@@ -484,6 +490,11 @@ CONFIG_PCIE_DW_PLAT=y
 CONFIG_PCIE_DW_PLAT_EP=y
 CONFIG_PCIE_DW_PLAT_HOST=y
 CONFIG_PCI_ENDPOINT=y
+CONFIG_PCI_ENDPOINT_CONFIGFS=y
+CONFIG_PCI_IOV=y
+CONFIG_PCI_PRI=y
+CONFIG_PCI_STUB=m
+CONFIG_PCI_SW_SWITCHTEC=m
 CONFIG_PCMCIA_NMCLAN=n
 CONFIG_PCMCIA_XIRCOM=n
 CONFIG_PCNET32=n
@@ -651,6 +662,7 @@ CONFIG_SND_HDA_PATCH_LOADER=y
 CONFIG_SND_HDA_POWER_SAVE_DEFAULT=1
 CONFIG_SND_HDA_PREALLOC_SIZE=0
 CONFIG_SND_HDA_RECONFIG=y
+CONFIG_SND_PCI=y
 CONFIG_SND_SIMPLE_CARD=m
 CONFIG_SND_SIMPLE_CARD_UTILS=m
 CONFIG_SND_SOC_AC97_BUS=y
