kernel config: Sound

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -265,6 +265,7 @@ CONFIG_GENERIC_GPIO=y
 CONFIG_GPIOLIB=y
 CONFIG_HAPPYMEAL=n
 CONFIG_HAS_IOMEM=y
+CONFIG_HDMI_LPE_AUDIO=m
 CONFIG_HID_GENERIC=y
 CONFIG_HINIC=m
 CONFIG_HIO=y
@@ -634,6 +635,9 @@ CONFIG_SKY2=m
 CONFIG_SMSC911X=n
 CONFIG_SMSC9420=n
 CONFIG_SND_BCD2000=m
+CONFIG_SND_CA0106=m
+CONFIG_SND_CTXFI=m
+CONFIG_SND_EMU10K1=m
 CONFIG_SND_HDA=m
 CONFIG_SND_HDA_CODEC_ANALOG=m
 CONFIG_SND_HDA_CODEC_CA0110=m
@@ -663,6 +667,7 @@ CONFIG_SND_HDA_POWER_SAVE_DEFAULT=1
 CONFIG_SND_HDA_PREALLOC_SIZE=0
 CONFIG_SND_HDA_RECONFIG=y
 CONFIG_SND_PCI=y
+CONFIG_SND_PCMCIA=n
 CONFIG_SND_SIMPLE_CARD=m
 CONFIG_SND_SIMPLE_CARD_UTILS=m
 CONFIG_SND_SOC_AC97_BUS=y
