kernel config: hid and usb config

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -266,7 +266,11 @@ CONFIG_GPIOLIB=y
 CONFIG_HAPPYMEAL=n
 CONFIG_HAS_IOMEM=y
 CONFIG_HDMI_LPE_AUDIO=m
+CONFIG_HID=y
+CONFIG_HIDRAW=y
+CONFIG_HID_BATTERY_STRENGTH=y
 CONFIG_HID_GENERIC=y
+CONFIG_HID_MICROSOFT=y
 CONFIG_HINIC=m
 CONFIG_HIO=y
 CONFIG_HOTPLUG_PCI=y
@@ -838,6 +842,8 @@ CONFIG_USB_ROLES_INTEL_XHCI=m
 CONFIG_USB_SI4713=m
 CONFIG_USB_SL811_HCD_ISO=y
 CONFIG_USB_SNP_CORE=m
+CONFIG_USB_STORAGE=m
+CONFIG_USB_UAS=m
 CONFIG_USB_UHCI_HCD=y
 CONFIG_USB_ULPI_BUS=m
 CONFIG_USB_XHCI_DBGCAP=y
