kernel config: enable options for running virtualized

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -138,6 +138,7 @@ CONFIG_CRYPTO_CRC32C_INTEL=y
 CONFIG_CRYPTO_DEV_CHELSIO_TLS=m
 CONFIG_CRYPTO_DEV_NITROX=m
 CONFIG_CRYPTO_DEV_NITROX_CNN55XX=m
+CONFIG_CRYPTO_DEV_VIRTIO=m
 CONFIG_CRYPTO_LZO=y
 CONFIG_CRYPTO_RNG=y
 CONFIG_CRYPTO_RNG_DEFAULT=y
@@ -148,6 +149,8 @@ CONFIG_DEBUG_INFO_BTF=n
 CONFIG_DELL_UART_BACKLIGHT=m
 CONFIG_DL2K=m
 CONFIG_DM9102=m
+CONFIG_DMABUF_HEAPS=y
+CONFIG_DMABUF_HEAPS_SYSTEM=y
 CONFIG_DMI_SCAN_MACHINE_NON_EFI_FALLBACK=y
 CONFIG_DM_CRYPT=y
 CONFIG_DM_SNAPSHOT=y
@@ -752,6 +755,7 @@ CONFIG_SUNDANCE=m
 CONFIG_SUNDANCE_MMIO=y
 CONFIG_SUNGEM=m
 CONFIG_SUNGEM_PHY=y
+CONFIG_SYNC_FILE=y
 CONFIG_SYSTEM_REVOCATION_KEYS=n
 CONFIG_SYSTEM_TRUSTED_KEYS=n
 CONFIG_TEHUTI=m
@@ -762,6 +766,7 @@ CONFIG_TTY_PRINTK_LEVEL=6
 CONFIG_TULIP=n
 CONFIG_TUN=y
 CONFIG_TYPHOON=m
+CONFIG_UDMABUF=y
 CONFIG_UIO=y
 CONFIG_ULI526X=m
 CONFIG_USB=y
@@ -853,6 +858,7 @@ CONFIG_USB_XHCI_PLATFORM=m
 CONFIG_USB_ZERO=m
 CONFIG_USERIO=m
 CONFIG_U_SERIAL_CONSOLE=y
+CONFIG_VBOXGUEST=m
 CONFIG_VERSION_SIGNATURE=n
 CONFIG_VETH=y
 CONFIG_VFIO=y
@@ -872,11 +878,20 @@ CONFIG_VIA_RHINE=m
 CONFIG_VIA_RHINE_MMIO=y
 CONFIG_VIA_VELOCITY=m
 CONFIG_VIRTIO=y
+CONFIG_VIRTIO_BALLOON=y
 CONFIG_VIRTIO_BLK=y
 CONFIG_VIRTIO_BLK_SCSI=y
+CONFIG_VIRTIO_FS=m
+CONFIG_VIRTIO_INPUT=m
+CONFIG_VIRTIO_MENU=y
+CONFIG_VIRTIO_MMIO=y
+CONFIG_VIRTIO_MMIO_CMDLINE_DEVICES=y
 CONFIG_VIRTIO_NET=y
+CONFIG_VIRTIO_PCI=m
+CONFIG_VIRTIO_PCI_LIB=y
 CONFIG_VIRTIO_VSOCKETS=m
 CONFIG_VIRTUALIZATION=y
+CONFIG_VIRT_DRIVERS=y
 CONFIG_VMWARE_VMCI_VSOCKETS=m
 CONFIG_VMXNET3=y
 CONFIG_VORTEX=m
