kernel config: cifs + nfs + dynamic debug

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -118,9 +118,12 @@ CONFIG_CHELSIO_T3=m
 CONFIG_CHELSIO_T4=m
 CONFIG_CHELSIO_T4VF=m
 CONFIG_CIFS=m
+CONFIG_CIFS_ALLOW_INSECURE_LEGACY=y
 CONFIG_CIFS_DFS_UPCALL=y
 CONFIG_CIFS_SMB2=y
 CONFIG_CIFS_SMB311=y
+CONFIG_CIFS_UPCALL=y
+CONFIG_CIFS_WEAK_PW_HASH=y
 CONFIG_CISS_SCSI_TAPE=y
 CONFIG_CNIC=m
 CONFIG_CONFIGFS_FS=y
@@ -145,6 +148,7 @@ CONFIG_CRYPTO_RNG_DEFAULT=y
 CONFIG_DE2104X=m
 CONFIG_DE600=y
 CONFIG_DE620=y
+CONFIG_DEBUG_FS=y
 CONFIG_DEBUG_INFO_BTF=n
 CONFIG_DELL_UART_BACKLIGHT=m
 CONFIG_DL2K=m
@@ -194,6 +198,7 @@ CONFIG_DRM_VIRTIO_GPU=m
 CONFIG_DRM_VMWGFX=m
 CONFIG_DRM_VMWGFX_FBCON=y
 CONFIG_DWMAC_INTEL=m
+CONFIG_DYNAMIC_DEBUG=y
 CONFIG_E1000=m
 CONFIG_E1000E=m
 CONFIG_E100=n
@@ -359,6 +364,7 @@ CONFIG_KEYBOARD_TCA6416=m
 CONFIG_KEYBOARD_TCA8418=m
 CONFIG_KEYBOARD_TM2_TOUCHKEY=m
 CONFIG_KEYBOARD_TWL4030=m
+CONFIG_KEYS=y
 CONFIG_KEYS_REQUEST_CACHE=y
 CONFIG_KS8851_MLL=m
 CONFIG_KSZ884X_PCI=m
@@ -462,6 +468,12 @@ CONFIG_NET_VENDOR_WIZNET=n
 CONFIG_NET_VENDOR_XILINX=n
 CONFIG_NET_VENDOR_XIRCOM=n
 CONFIG_NFP=m
+CONFIG_NFS_DISABLE_UDP_SUPPORT=y
+CONFIG_NFS_FS=m
+CONFIG_NFS_V2=m
+CONFIG_NFS_V3=m
+CONFIG_NFS_V4=m
+CONFIG_NFS_V4_1=y
 CONFIG_NFS_V4_1_MIGRATION=y
 CONFIG_NF_CONNTRACK_BRIDGE=m
 CONFIG_NF_NAT_MASQUERADE=y
@@ -486,6 +498,7 @@ CONFIG_NVME_TARGET_TCP=m
 CONFIG_NVME_TCP=m
 CONFIG_ORC_UNWINDER=y
 CONFIG_OVERLAYFS_FS=y
+CONFIG_OVERLAY_FS=m
 CONFIG_PACKET=y
 CONFIG_PARPORT=y
 CONFIG_PATA_ACPI=m
@@ -627,8 +640,11 @@ CONFIG_SCSI_UFS_DWC_TC_PCI=m
 CONFIG_SCSI_UFS_DWC_TC_PLATFORM=m
 CONFIG_SCSI_VIRTIO=m
 CONFIG_SCSI_WD719X=m
+CONFIG_SECURITY_APPARMOR=n
+CONFIG_SECURITY_DMESG_RESTRICT=y
 CONFIG_SECURITY_NO_EXCLUSIVE_LSM=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
+CONFIG_SECURITY_SELINUX=n
 CONFIG_SEEQ8005=y
 CONFIG_SFC=m
 CONFIG_SFC=m
@@ -755,6 +771,7 @@ CONFIG_SUNDANCE=m
 CONFIG_SUNDANCE_MMIO=y
 CONFIG_SUNGEM=m
 CONFIG_SUNGEM_PHY=y
+CONFIG_SYMBOLIC_ERRNAME=y
 CONFIG_SYNC_FILE=y
 CONFIG_SYSTEM_REVOCATION_KEYS=n
 CONFIG_SYSTEM_TRUSTED_KEYS=n
