[kernel-vanilla] Speed up kernel config patching, fallback to config.gz

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -385,6 +385,7 @@ CONFIG_LOCALVERSION="-openslx"
 CONFIG_MD=y
 CONFIG_MDIO=y
 CONFIG_MEDIA_RC_SUPPORT=y
+CONFIG_MEMORY=y
 CONFIG_MICROCODE=y
 CONFIG_MICROCODE_AMD=y
 CONFIG_MICROCODE_AMD_EARLY=y
