[pulseaudio] Add requirements for MiniLinux

--- a/core/modules/pulseaudio/module.conf
+++ b/core/modules/pulseaudio/module.conf
@@ -2,11 +2,14 @@
 
 REQUIRED_DIRECTORIES="
 	/etc/dbus-1
+	/etc/modprobe.d
 	/etc/pulse
 	/etc/xdg/autostart
 	/lib/udev
 	/usr/bin
 	/usr/lib
 	/usr/share/alsa
+	/usr/share/mime
+	/usr/share/pavucontrol
 	/usr/share/pulseaudio
 "
