--- a/core/modules/dbus/module.conf
+++ b/core/modules/dbus/module.conf
@@ -11,6 +11,7 @@ REQUIRED_BINARIES="
 REQUIRED_DIRECTORIES="
 	/etc/dbus-1
 	/usr/share/dbus-1
+	/usr/lib/systemd/user
 "
 REQUIRED_FILES="
 	/lib/systemd/system/dbus.service
