[qt5core] Add gnome 16x16 icons, add qt5ct
qt5ct is required for non-GNOME/KDE desktop environments to properly
configre and select an icon theme, and other styling options.

--- a/core/modules/qt5core/module.conf
+++ b/core/modules/qt5core/module.conf
@@ -3,13 +3,19 @@ REQUIRED_LIBRARIES="
 	libqjpeg
 	libqsvg
 	libqsvgicon
+	libqt5ct
+	libqt5ct-style
 	libqxcb
 "
 REQUIRED_DIRECTORIES="
+	/usr/share/icons/gnome/16x16
 "
 REQUIRED_FILES="
-	/usr/share/qt5/translations/qt*_en.qm
+	/etc/X11/Xsession.d/99qt5ct
+	/usr/share/icons/gnome/icon-theme.cache
+	/usr/share/icons/gnome/index.theme
 	/usr/share/qt5/translations/qt*_de.qm
+	/usr/share/qt5/translations/qt*_en.qm
 	/usr/share/qt5/translations/qt*_fr.qm
 	/usr/share/qt5/translations/qt*_zh_CN.qm
 "
