--- a/core/modules/qt5core/data/etc/xdg/qt5ct/qt5ct.conf
+++ b/core/modules/qt5core/data/etc/xdg/qt5ct/qt5ct.conf
@@ -1,5 +1,5 @@
 [Appearance]
-color_scheme_path=/usr/share/qt5ct/colors/airy.conf
+color_scheme_path=
 custom_palette=false
 icon_theme=gnome
 standard_dialogs=default
@@ -7,7 +7,7 @@ style=Fusion
 
 [Fonts]
 fixed=@Variant(\0\0\0@\0\0\0\x12\0M\0o\0n\0o\0s\0p\0\x61\0\x63\0\x65@$\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
-general=@Variant(\0\0\0@\0\0\0\x16\0\x44\0\x65\0j\0\x61\0V\0u\0 \0S\0\x61\0n\0s@$\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
+general=@Variant(\0\0\0@\0\0\0\x14\0S\0\x61\0n\0s\0 \0S\0\x65\0r\0i\0\x66@$\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
 
 [Interface]
 activate_item_on_single_click=1
@@ -23,6 +23,3 @@ stylesheets=@Invalid()
 toolbutton_style=4
 underline_shortcut=1
 wheel_scroll_lines=3
-
-[SettingsWindow]
-geometry="@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\xe\0\0\0\xc7\0\0\x3\xee\0\0\x3\x42\0\0\x1\xf\0\0\0\xdb\0\0\x3\xed\0\0\x3=\0\0\0\0\0\0\0\0\x5\0\0\0\x1\xf\0\0\0\xdb\0\0\x3\xed\0\0\x3=)"
