[pulseaudio] Use pavucontrol-slx :)

--- a/core/modules/pulseaudio/module.conf
+++ b/core/modules/pulseaudio/module.conf
@@ -1,5 +1,11 @@
 #!/bin/bash
 
+REQUIRED_GIT="https://git.openslx.org/openslx-ng/pavucontrol-slx.git"
+
+REQUIRED_BINARIES="
+	pavucontrol-slx
+"
+
 REQUIRED_DIRECTORIES="
 	/etc/dbus-1
 	/etc/modprobe.d
