--- a/core/modules/qemu/runvirt-plugin-qemu/pom.xml
+++ b/core/modules/qemu/runvirt-plugin-qemu/pom.xml
@@ -84,6 +84,11 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.8</version>
+    </dependency>
+    <dependency>
       <groupId>com.ginsberg</groupId>
       <artifactId>junit5-system-exit</artifactId>
       <version>1.0.0</version>
@@ -226,6 +231,7 @@
 			<directory>${basedir}/src/test/resources</directory>
 			<includes>
 				<include>libvirt/xml/*</include>
+				<include>qemu/firmware/*</include>
 			</includes>
 		</testResource>
 	</testResources>
