--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -9,6 +9,7 @@ CONFIG_ACPI_BATTERY=y
 CONFIG_ACPI_BUTTON=y
 CONFIG_ACPI_FAN=y
 CONFIG_ACPI_THERMAL=y
+CONFIG_ACPI_WMI=m
 CONFIG_AGP=n
 CONFIG_ALLOW_LOCKDOWN_LIFT=y
 CONFIG_ALTERA_TSE=m
@@ -154,6 +155,7 @@ CONFIG_DELL_UART_BACKLIGHT=m
 CONFIG_DL2K=m
 CONFIG_DM9102=m
 CONFIG_DMABUF_HEAPS=y
+CONFIG_DMABUF_HEAPS_CMA=y
 CONFIG_DMABUF_HEAPS_SYSTEM=y
 CONFIG_DMI_SCAN_MACHINE_NON_EFI_FALLBACK=y
 CONFIG_DM_CRYPT=y
@@ -184,6 +186,7 @@ CONFIG_DRM_I915=m
 CONFIG_DRM_I915_GVT=y
 CONFIG_DRM_I915_GVT_KVMGT=m
 CONFIG_DRM_KMS_HELPER=y
+CONFIG_DRM_LEGACY=n
 CONFIG_DRM_LOAD_EDID_FIRMWARE=y
 CONFIG_DRM_MGAG200=m
 CONFIG_DRM_NOUVEAU=m
@@ -269,6 +272,7 @@ CONFIG_FUSION_LOGGING=y
 CONFIG_FUSION_MAX_SGE=128
 CONFIG_FUSION_SAS=m
 CONFIG_FUSION_SPI=m
+CONFIG_FW_LOADER_COMPRESS=y
 CONFIG_GENERIC_GPIO=y
 CONFIG_GPIOLIB=y
 CONFIG_HAPPYMEAL=n
@@ -317,12 +321,14 @@ CONFIG_INPUT_DRV2667_HAPTICS=m
 CONFIG_INPUT_E3X0_BUTTON=m
 CONFIG_INPUT_EVBUG=n
 CONFIG_INPUT_EVDEV=y
+CONFIG_INPUT_FF_MEMLESS=n
 CONFIG_INTEL_BXTWC_PMIC_TMU=m
 CONFIG_INTEL_BXT_PMIC_THERMAL=m
 CONFIG_INTEL_CHTDC_TI_PWRBTN=m
 CONFIG_INTEL_IOMMU_DEFAULT_ON=y
 CONFIG_INTEL_ISH_FIRMWARE_DOWNLOADER=m
 CONFIG_INTEL_MEI_HDCP=m
+CONFIG_INTEL_SPEED_SELECT_INTERFACE=m
 CONFIG_INTEL_TH_ACPI=m
 CONFIG_IP1000=y
 CONFIG_IP_NF_FILTER=y
@@ -514,6 +520,7 @@ CONFIG_PCIE_DW_PLAT_HOST=y
 CONFIG_PCI_ENDPOINT=y
 CONFIG_PCI_ENDPOINT_CONFIGFS=y
 CONFIG_PCI_IOV=y
+CONFIG_PCI_PF_STUB=m
 CONFIG_PCI_PRI=y
 CONFIG_PCI_STUB=m
 CONFIG_PCI_SW_SWITCHTEC=m
@@ -534,6 +541,8 @@ CONFIG_QLGE=m
 CONFIG_R6040=m
 CONFIG_R8169=m
 CONFIG_RAID_ATTRS=m
+CONFIG_RANDOM_TRUST_BOOTLOADER=y
+CONFIG_RANDOM_TRUST_CPU=y
 CONFIG_RD_XZ=y
 CONFIG_ROCKCHIP_PHY=y
 CONFIG_S2IO=m
@@ -646,12 +655,14 @@ CONFIG_SECURITY_DMESG_RESTRICT=y
 CONFIG_SECURITY_NO_EXCLUSIVE_LSM=y
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY_SELINUX=n
+CONFIG_SECURITY_SMACK=n
 CONFIG_SEEQ8005=y
 CONFIG_SFC=m
 CONFIG_SFC=m
 CONFIG_SFC_FALCON=m
 CONFIG_SFC_MCDI_MON=y
 CONFIG_SFC_MTD=y
+CONFIG_SFP=m
 CONFIG_SIS190=m
 CONFIG_SIS900=n
 CONFIG_SKGE=m
@@ -779,6 +790,7 @@ CONFIG_SYSTEM_TRUSTED_KEYS=n
 CONFIG_TEHUTI=m
 CONFIG_TIGON3=m
 CONFIG_TLAN=m
+CONFIG_TOUCHSCREEN_DMI=y
 CONFIG_TTY_PRINTK=y
 CONFIG_TTY_PRINTK_LEVEL=6
 CONFIG_TULIP=n
