Update kernel config

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -253,6 +253,7 @@ CONFIG_FB_SIS=n
 CONFIG_FB_SM501=n
 CONFIG_FB_SM712=n
 CONFIG_FB_SMSCUFX=n
+CONFIG_FB_TFT=n
 CONFIG_FB_TRIDENT=n
 CONFIG_FB_UDL=n
 CONFIG_FB_VESA=n
@@ -263,6 +264,7 @@ CONFIG_FEALNX=m
 CONFIG_FEALNX=n
 CONFIG_FM10K=m
 CONFIG_FORCEDETH=m
+CONFIG_FRAMEBUFFER_CONSOLE_DEFERRED_TAKEOVER=y
 CONFIG_FUSE_FS=y
 CONFIG_FUSION=y
 CONFIG_FUSION_CTL=m
@@ -788,6 +790,11 @@ CONFIG_SYNC_FILE=y
 CONFIG_SYSTEM_REVOCATION_KEYS=n
 CONFIG_SYSTEM_TRUSTED_KEYS=n
 CONFIG_TEHUTI=m
+CONFIG_TEST_FIRMWARE=n
+CONFIG_TEST_LKM=n
+CONFIG_TEST_STATIC_KEYS=n
+CONFIG_TEST_UDELAY=n
+CONFIG_TEST_USER_COPY=n
 CONFIG_TIGON3=m
 CONFIG_TLAN=m
 CONFIG_TOUCHSCREEN_DMI=y
@@ -907,6 +914,7 @@ CONFIG_VGA_SWITCHEROO=n
 CONFIG_VIA_RHINE=m
 CONFIG_VIA_RHINE_MMIO=y
 CONFIG_VIA_VELOCITY=m
+CONFIG_VIDEOMODE_HELPERS=y
 CONFIG_VIRTIO=y
 CONFIG_VIRTIO_BALLOON=y
 CONFIG_VIRTIO_BLK=y
