--- a/core/modules/cups/data/etc/cups/cupsd.conf
+++ b/core/modules/cups/data/etc/cups/cupsd.conf
@@ -18,7 +18,7 @@ SystemGroup lpadmin
 
 # Only listen for connections from the local machine.
 Listen localhost:631
-Listen /var/run/cups/cups.sock
+Listen /run/cups/cups.sock
 
 # Show shared printers on the local network.
 Browsing Off
