[run-virt-docker] add data-container; restructure init; introduce docker-archive as container-context
- clients now able to create a data volume from a specified data-container
-- REQURIES openslx-sat commit 4bd355c8b9724dec6268e71e9a18a326978d4317

--- a/core/modules/run-virt-docker/data/opt/openslx/vmchooser/plugins/docker/docker-init.desktop
+++ b/core/modules/run-virt-docker/data/opt/openslx/vmchooser/plugins/docker/docker-init.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Encoding=UTF-8
 Name=docker-init
 Type=Application
-Exec=
+Exec="/opt/openslx/vmchooser/plugins/docker/docker-init"
 Icon=
 Terminal=true
 StartupNotify=true
