[docker-ce] Fix https://github.com/NVIDIA/nvidia-docker/issues/1399

--- a/core/modules/docker-ce/module.conf
+++ b/core/modules/docker-ce/module.conf
@@ -4,6 +4,7 @@ REQUIRED_FILES="
 	/etc/systemd/system/docker.service
 	/etc/subuid
 	/etc/subgid
+	/etc/nvidia-container-runtime/config.toml
 "
 
 REQUIRED_BINARIES="
