[xscreensaver] Use openslx-5.x branch

--- a/core/modules/xscreensaver/module.conf
+++ b/core/modules/xscreensaver/module.conf
@@ -4,7 +4,7 @@ REQUIRED_MODULES="
 "
 # Switch back to branch "openslx" once 6.x is fixed
 REQUIRED_GIT="
-	git://git.openslx.org/openslx-ng/xscreensaver.git||bfe7aeb88fac24b
+	git://git.openslx.org/openslx-ng/xscreensaver.git|openslx-5.x
 	git://git.openslx.org/openslx-ng/bwlp-screensaver.git
 "
 REQUIRED_PREFIX="/opt/openslx/bin"
