--- a/core/modules/evdi/module.conf
+++ b/core/modules/evdi/module.conf
@@ -3,7 +3,7 @@
 REQUIRED_GIT="https://github.com/DisplayLink/evdi.git"
 
 REQUIRED_FILES="
-       /lib/modules/${TARGET_KERNEL_LONG}/extra/evdi.ko
+       /lib/modules/${TARGET_KERNEL_LONG}/kernel/extra/evdi.ko
 "
 
 REQUIRED_MODULES="kernel"
