--- a/core/modules/hardware-stats/data/etc/systemd/system/hardware-stats.service
+++ b/core/modules/hardware-stats/data/etc/systemd/system/hardware-stats.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Gather hardware information about this machine
-After=tmp.target mount-vm-store.service network.target run-virt-env.service
+After=tmp.target
 Wants=tmp.target system-check.service
 Before=system-check.service
 
