--- a/core/modules/hardware-stats/data/etc/systemd/system/hardware-stats.service
+++ b/core/modules/hardware-stats/data/etc/systemd/system/hardware-stats.service
@@ -1,7 +1,10 @@
 [Unit]
 Description=Gather hardware information about this machine
-After=tmp.target
 Wants=tmp.target system-check.service
+After=tmp.target
+# Because we might mount something to /tmp/virt there, which we use for ID44 calculation
+After=run-virt-env.service
+# This one needs the data we gather
 Before=system-check.service
 
 [Service]
