[cups-sicgs] Use local mirror for driver

--- a/core/modules/cups-sicgs/module.conf
+++ b/core/modules/cups-sicgs/module.conf
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-REQUIRED_ARCHIVE="http://files.canon-europe.com/files/soft45525/Software/CQue_v3.0.2_Linux_32_64_DE.tar.zip"
+REQUIRED_ARCHIVE="http://132.230.4.17/install/mltk/cque-de-3.0-2.${X86_64_I386}.tar.gz"
 REQUIRED_BINARIES="
 	sicgsfilter
 	sicnc
