--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -1,30 +1,39 @@
+=
 CONFIG_64BIT_TIME=y
 CONFIG_8139CP=n
 CONFIG_8139TOO=n
-CONFIG_ACENIC=m
 CONFIG_ACENIC=m
 CONFIG_ACPI_AC=y
 CONFIG_ACPI_ADXL=y
 CONFIG_ACPI_BATTERY=y
 CONFIG_ACPI_BUTTON=y
+CONFIG_ACPI_DEBUGGER=n
+CONFIG_ACPI_DPTF=y
 CONFIG_ACPI_FAN=y
+CONFIG_ACPI_FPDT=y
+CONFIG_ACPI_HMAT=y
 CONFIG_ACPI_THERMAL=y
+CONFIG_ACPI_VIOT=y
 CONFIG_ACPI_WMI=m
 CONFIG_AGP=n
 CONFIG_ALLOW_LOCKDOWN_LIFT=y
 CONFIG_ALTERA_TSE=m
 CONFIG_AMD8111_ETH=n
+CONFIG_AMDTEE=m
 CONFIG_AMD_IOMMU_V2=y
+CONFIG_AMD_PMC=m
+CONFIG_AMD_PTDMA=m
+CONFIG_AMD_SFH_HID=m
 CONFIG_AMD_XGBE=m
 CONFIG_ANDROID_BINDER_DEVICES=n
 CONFIG_AQTION=m
 CONFIG_ARCH_CLOCKSOURCE_INIT=y
 CONFIG_ARCH_HAS_MMIO_FLUSH=y
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
+CONFIG_ARCNET=n
 CONFIG_ATL1=m
 CONFIG_ATL1C=m
 CONFIG_ATL1E=m
-CONFIG_ATL2=m
 CONFIG_ATL2=n
 CONFIG_ATP=n
 CONFIG_AUFS_BDEV_LOOP=y
@@ -60,7 +69,6 @@ CONFIG_BACKLIGHT_PROGEAR=y
 CONFIG_BACKLIGHT_PWM=m
 CONFIG_BACKLIGHT_RAVE_SP=m
 CONFIG_BACKLIGHT_SAHARA=y
-CONFIG_BACKLIGHT_SAHARA=y
 CONFIG_BACKLIGHT_SKY81452=m
 CONFIG_BACKLIGHT_WM831X=m
 CONFIG_BATTERY_88PM860X=m
@@ -83,6 +91,11 @@ CONFIG_BATTERY_SBS=m
 CONFIG_BATTERY_TWL4030_MADC=m
 CONFIG_BCMGENET=m
 CONFIG_BE2NET=m
+CONFIG_BINFMT_MISC=y
+CONFIG_BLK_CGROUP_FC_APPID=y
+CONFIG_BLK_CGROUP_IOCOST=y
+CONFIG_BLK_CGROUP_IOLATENCY=y
+CONFIG_BLK_CGROUP_IOPRIO=y
 CONFIG_BLK_CPQ_CISS_DA=m
 CONFIG_BLK_DEV=y
 CONFIG_BLK_DEV_CRYPTOLOOP=n
@@ -97,7 +110,9 @@ CONFIG_BLK_DEV_MD=y
 CONFIG_BLK_DEV_NBD=y
 CONFIG_BLK_DEV_NVME=y
 CONFIG_BLK_DEV_PCIESSD_MTIP32XX=y
+CONFIG_BLK_DEV_RAM_SIZE=16384
 CONFIG_BLK_MQ_VIRTIO=y
+CONFIG_BLK_RQ_ALLOC_TIME=y
 CONFIG_BLOCK=y
 CONFIG_BNA=m
 CONFIG_BNX2=m
@@ -108,24 +123,32 @@ CONFIG_BPF_JIT=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
 CONFIG_BRIDGE=y
 CONFIG_BUILD_SALT=n
+CONFIG_CAIF=n
+CONFIG_CAN_CC770_ISA=
+CONFIG_CAN_EMS_PCMCIA=n
+CONFIG_CAN_SJA1000_ISA=n
 CONFIG_CASSINI=m
 CONFIG_CDROM=y
 CONFIG_CEC_NOTIFIER=y
 CONFIG_CEC_PLATFORM_DRIVERS=y
+CONFIG_CGROUP_MISC=y
 CONFIG_CHELSIO_IPSEC_INLINE=y
 CONFIG_CHELSIO_T1=m
 CONFIG_CHELSIO_T1_1G=y
 CONFIG_CHELSIO_T3=m
 CONFIG_CHELSIO_T4=m
 CONFIG_CHELSIO_T4VF=m
+CONFIG_CHELSIO_TLS_DEVICE=m
 CONFIG_CIFS=m
 CONFIG_CIFS_ALLOW_INSECURE_LEGACY=y
 CONFIG_CIFS_DFS_UPCALL=y
 CONFIG_CIFS_SMB2=y
 CONFIG_CIFS_SMB311=y
+CONFIG_CIFS_SWN_UPCALL=y
 CONFIG_CIFS_UPCALL=y
 CONFIG_CIFS_WEAK_PW_HASH=y
 CONFIG_CISS_SCSI_TAPE=y
+CONFIG_CMDLINE_PARTITION=n
 CONFIG_CNIC=m
 CONFIG_CONFIGFS_FS=y
 CONFIG_CONSOLE_POLL=y
@@ -143,6 +166,11 @@ CONFIG_CRYPTO_DEV_CHELSIO_TLS=m
 CONFIG_CRYPTO_DEV_NITROX=m
 CONFIG_CRYPTO_DEV_NITROX_CNN55XX=m
 CONFIG_CRYPTO_DEV_VIRTIO=m
+CONFIG_CRYPTO_ECDSA=y
+CONFIG_CRYPTO_ECRDSA=m
+CONFIG_CRYPTO_LIB_CHACHA=m
+CONFIG_CRYPTO_LIB_CURVE25519=m
+CONFIG_CRYPTO_LIB_CURVE25519_GENERIC=m
 CONFIG_CRYPTO_LZO=y
 CONFIG_CRYPTO_RNG=y
 CONFIG_CRYPTO_RNG_DEFAULT=y
@@ -151,18 +179,23 @@ CONFIG_DE600=y
 CONFIG_DE620=y
 CONFIG_DEBUG_FS=y
 CONFIG_DEBUG_INFO_BTF=n
+CONFIG_DEFAULT_CODEL=n
+CONFIG_DEFAULT_FQ_CODEL=y
+CONFIG_DEFAULT_NET_SCH="fq_codel"
 CONFIG_DELL_UART_BACKLIGHT=m
 CONFIG_DL2K=m
 CONFIG_DM9102=m
 CONFIG_DMABUF_HEAPS=y
 CONFIG_DMABUF_HEAPS_CMA=y
 CONFIG_DMABUF_HEAPS_SYSTEM=y
+CONFIG_DMA_VIRTUAL_CHANNELS=y
 CONFIG_DMI_SCAN_MACHINE_NON_EFI_FALLBACK=y
 CONFIG_DM_CRYPT=y
 CONFIG_DM_SNAPSHOT=y
 CONFIG_DM_THIN_PROVISIONING=y
 CONFIG_DNET=m
 CONFIG_DNS_RESOLVER=m
+CONFIG_DP83869_PHY=m
 CONFIG_DRM=y
 CONFIG_DRM_AMDGPU=m
 CONFIG_DRM_AMDGPU_CIK=y
@@ -174,12 +207,14 @@ CONFIG_DRM_AMD_DC_DCN1_0=y
 CONFIG_DRM_AST=m
 CONFIG_DRM_BOCHS=m
 CONFIG_DRM_CIRRUS_QEMU=m
+CONFIG_DRM_DP_CEC=y
 CONFIG_DRM_GEM_CMA_HELPER=y
 CONFIG_DRM_GEM_SHMEM_HELPER=y
 CONFIG_DRM_GM12U320=m
 CONFIG_DRM_GMA3600=y
 CONFIG_DRM_GMA500=n
 CONFIG_DRM_GMA600=n
+CONFIG_DRM_HYPERV=m
 CONFIG_DRM_I2C_CH7006=m
 CONFIG_DRM_I2C_SIL164=m
 CONFIG_DRM_I915=m
@@ -191,20 +226,25 @@ CONFIG_DRM_LOAD_EDID_FIRMWARE=y
 CONFIG_DRM_MGAG200=m
 CONFIG_DRM_NOUVEAU=m
 CONFIG_DRM_NOUVEAU_BACKLIGHT=y
+CONFIG_DRM_NOUVEAU_SVM=y
 CONFIG_DRM_QXL=m
 CONFIG_DRM_RADEON=m
 CONFIG_DRM_RADEON_KMS=y
+CONFIG_DRM_SIMPLEDRM=y
 CONFIG_DRM_TTM=m
 CONFIG_DRM_UDL=m
 CONFIG_DRM_USB=m
 CONFIG_DRM_VIRTIO_GPU=m
 CONFIG_DRM_VMWGFX=m
 CONFIG_DRM_VMWGFX_FBCON=y
+CONFIG_DUMMY_IRQ=n
 CONFIG_DWMAC_INTEL=m
 CONFIG_DYNAMIC_DEBUG=y
 CONFIG_E1000=m
 CONFIG_E1000E=m
 CONFIG_E100=n
+CONFIG_ECRYPT_FS=m
+CONFIG_ECRYPT_FS_MESSAGING=n
 CONFIG_EFI=y
 CONFIG_EFIVAR_FS=y
 CONFIG_EFI_ALLOW_SECURE_BOOT_EXIT=y
@@ -214,7 +254,7 @@ CONFIG_EFI_SECURE_BOOT_LOCK_DOWN=y
 CONFIG_EFI_SIGNATURE_LIST_PARSER=y
 CONFIG_EFI_STUB=y
 CONFIG_EFI_VARS=y
-CONFIG_EISA=y
+CONFIG_EISA=n
 CONFIG_EL3=n
 CONFIG_ENCRYPTED_KEYS=y
 CONFIG_ENIC=m
@@ -222,20 +262,32 @@ CONFIG_EPIC100=n
 CONFIG_ETHERNET=y
 CONFIG_ETHOC=m
 CONFIG_ETHTOOL_NETLINK=y
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
+CONFIG_EXFAT_FS=m
 CONFIG_EXPORTFS=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_EXT4_FS_XATTR=y
 CONFIG_EXT4_USE_FOR_EXT23=y
+CONFIG_EXTCON_FSA9480=m
+CONFIG_EXTCON_INTEL_MRFLD=m
+CONFIG_EXTCON_PTN5150=m
+CONFIG_EXTCON_USBC_CROS_EC=m
+CONFIG_EXTCON_USBC_TUSB320=m
 CONFIG_EXYNOS_VIDEO=y
 CONFIG_FB=y
 CONFIG_FB_3DFX=n
+CONFIG_FB_ARC=n
 CONFIG_FB_ARK=n
+CONFIG_FB_ASILIANT=n
 CONFIG_FB_ATY128=n
 CONFIG_FB_ATY=n
+CONFIG_FB_BOOT_VESA_SUPPORT=y
 CONFIG_FB_CARILLO_RANCH=n
 CONFIG_FB_CARMINE=n
+CONFIG_FB_CIRRUS=n
+CONFIG_FB_CYBER2000=n
 CONFIG_FB_EFI=y
 CONFIG_FB_I740=n
 CONFIG_FB_INTEL=n
@@ -245,8 +297,12 @@ CONFIG_FB_MATROX=n
 CONFIG_FB_MATROX_I2C=n
 CONFIG_FB_MATROX_MAVEN=n
 CONFIG_FB_NEOMAGIC=n
+CONFIG_FB_OPENCORES=n
+CONFIG_FB_PM2=n
 CONFIG_FB_PM3=n
 CONFIG_FB_RADEON=n
+CONFIG_FB_RIVA=n
+CONFIG_FB_S1D13XXX=n
 CONFIG_FB_S3=n
 CONFIG_FB_SAVAGE=n
 CONFIG_FB_SIS=n
@@ -256,13 +312,17 @@ CONFIG_FB_SMSCUFX=n
 CONFIG_FB_TFT=n
 CONFIG_FB_TRIDENT=n
 CONFIG_FB_UDL=n
-CONFIG_FB_VESA=n
+CONFIG_FB_UVESA=n
+CONFIG_FB_VESA=y
+CONFIG_FB_VGA16=n
 CONFIG_FB_VIA=n
 CONFIG_FB_VOODOO1=n
 CONFIG_FB_VT8623=n
-CONFIG_FEALNX=m
 CONFIG_FEALNX=n
 CONFIG_FM10K=m
+CONFIG_FONT_6x10=y
+CONFIG_FONT_8x8=n
+CONFIG_FONT_ACORN_8x8=n
 CONFIG_FORCEDETH=m
 CONFIG_FRAMEBUFFER_CONSOLE_DEFERRED_TAKEOVER=y
 CONFIG_FUSE_FS=y
@@ -275,6 +335,7 @@ CONFIG_FUSION_MAX_SGE=128
 CONFIG_FUSION_SAS=m
 CONFIG_FUSION_SPI=m
 CONFIG_FW_LOADER_COMPRESS=y
+CONFIG_GADGET_UAC1=n
 CONFIG_GENERIC_GPIO=y
 CONFIG_GPIOLIB=y
 CONFIG_HAPPYMEAL=n
@@ -297,8 +358,11 @@ CONFIG_HSA_AMD=y
 CONFIG_HWSPINLOCK=y
 CONFIG_HYPERV_IOMMU=y
 CONFIG_HYPERV_VSOCKETS=m
+CONFIG_HZ=300
+CONFIG_HZ_300=y
 CONFIG_I2C_AMD_MP2=m
 CONFIG_I2C_BCM2048=m
+CONFIG_I2C_DESIGNWARE_AMDPSP=y
 CONFIG_I2C_MUX_PINCTRL=m
 CONFIG_I2C_NVIDIA_GPU=m
 CONFIG_I40E=m
@@ -311,6 +375,7 @@ CONFIG_IGC=m
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_INET=y
+CONFIG_INFTL=n
 CONFIG_INPUT_BMA150=m
 CONFIG_INPUT_CMA3000=m
 CONFIG_INPUT_CMA3000_I2C=m
@@ -324,10 +389,15 @@ CONFIG_INPUT_E3X0_BUTTON=m
 CONFIG_INPUT_EVBUG=n
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_FF_MEMLESS=n
+CONFIG_INPUT_IQS269A=m
+CONFIG_INPUT_IQS626A=m
 CONFIG_INTEL_BXTWC_PMIC_TMU=m
 CONFIG_INTEL_BXT_PMIC_THERMAL=m
 CONFIG_INTEL_CHTDC_TI_PWRBTN=m
-CONFIG_INTEL_IOMMU_DEFAULT_ON=y
+CONFIG_INTEL_IDXD=m
+CONFIG_INTEL_IDXD_PERFMON=y
+CONFIG_INTEL_IDXD_SVM=y
+CONFIG_INTEL_IOMMU_DEFAULT_ON=n
 CONFIG_INTEL_ISH_FIRMWARE_DOWNLOADER=m
 CONFIG_INTEL_MEI_HDCP=m
 CONFIG_INTEL_SPEED_SELECT_INTERFACE=m
@@ -386,13 +456,18 @@ CONFIG_KVM_GUEST=y
 CONFIG_KVM_INTEL=m
 CONFIG_KVM_MMIO=y
 CONFIG_KVM_VFIO=y
+CONFIG_LAN743X=m
 CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_LCD_PLATFORM=y
 CONFIG_LIBCRC32C=y
 CONFIG_LOCALVERSION="-openslx"
+CONFIG_LOCK_DOWN_KERNEL_FORCE_CONFIDENTIALITY=n
+CONFIG_LOCK_DOWN_KERNEL_FORCE_INTEGRITY=n
+CONFIG_LOCK_DOWN_KERNEL_FORCE_NONE=y
 CONFIG_MD=y
 CONFIG_MDIO=y
 CONFIG_MEDIA_RC_SUPPORT=y
+CONFIG_MEDIA_SDR_SUPPORT=n
 CONFIG_MEMORY=y
 CONFIG_MICROCODE=y
 CONFIG_MICROCODE_AMD=y
@@ -401,6 +476,7 @@ CONFIG_MICROCODE_EARLY=y
 CONFIG_MICROCODE_INTEL=y
 CONFIG_MICROCODE_INTEL_EARLY=y
 CONFIG_MICROCODE_OLD_INTERFACE=y
+CONFIG_MISC_ALCOR_PCI=m
 CONFIG_MLX4_CORE=m
 CONFIG_MLX4_CORE_GEN2=y
 CONFIG_MLX4_EN=m
@@ -408,6 +484,7 @@ CONFIG_MLX5_CORE=m
 CONFIG_MLX5_CORE_EN=y
 CONFIG_MMC=y
 CONFIG_MODULE_SIG_KEY=n
+CONFIG_MODULE_SIG_KEY_TYPE_ECDSA=y
 CONFIG_MOUSE_PS2_TOUCHKIT=y
 CONFIG_MTRR_SANITIZER_ENABLE_DEFAULT=1
 CONFIG_MYRI10GE=m
@@ -444,7 +521,6 @@ CONFIG_NET_VENDOR_GOOGLE=y
 CONFIG_NET_VENDOR_HP=y
 CONFIG_NET_VENDOR_HUAWEI=y
 CONFIG_NET_VENDOR_I825XX=y
-CONFIG_NET_VENDOR_I825XX=y
 CONFIG_NET_VENDOR_INTEL=y
 CONFIG_NET_VENDOR_MARVELL=y
 CONFIG_NET_VENDOR_MELLANOX=y
@@ -463,7 +539,6 @@ CONFIG_NET_VENDOR_QUALCOMM=y
 CONFIG_NET_VENDOR_RDC=y
 CONFIG_NET_VENDOR_REALTEK=y
 CONFIG_NET_VENDOR_SEEQ=y
-CONFIG_NET_VENDOR_SILAN=n
 CONFIG_NET_VENDOR_SILAN=y
 CONFIG_NET_VENDOR_SIS=y
 CONFIG_NET_VENDOR_SMSC=n
@@ -660,7 +735,6 @@ CONFIG_SECURITY_SELINUX=n
 CONFIG_SECURITY_SMACK=n
 CONFIG_SEEQ8005=y
 CONFIG_SFC=m
-CONFIG_SFC=m
 CONFIG_SFC_FALCON=m
 CONFIG_SFC_MCDI_MON=y
 CONFIG_SFC_MTD=y
@@ -683,6 +757,7 @@ CONFIG_SND_HDA_CODEC_CA0132_DSP=y
 CONFIG_SND_HDA_CODEC_CIRRUS=m
 CONFIG_SND_HDA_CODEC_CMEDIA=m
 CONFIG_SND_HDA_CODEC_CONEXANT=m
+CONFIG_SND_HDA_CODEC_CS8409=m
 CONFIG_SND_HDA_CODEC_HDMI=m
 CONFIG_SND_HDA_CODEC_REALTEK=m
 CONFIG_SND_HDA_CODEC_SI3054=m
@@ -699,26 +774,125 @@ CONFIG_SND_HDA_I915=y
 CONFIG_SND_HDA_INPUT_BEEP=y
 CONFIG_SND_HDA_INPUT_BEEP_MODE=0
 CONFIG_SND_HDA_INTEL=m
+CONFIG_SND_HDA_INTEL_HDMI_SILENT_STREAM=y
 CONFIG_SND_HDA_PATCH_LOADER=y
 CONFIG_SND_HDA_POWER_SAVE_DEFAULT=1
 CONFIG_SND_HDA_PREALLOC_SIZE=0
 CONFIG_SND_HDA_RECONFIG=y
+CONFIG_SND_HDA_SCODEC_CS35L41=m
+CONFIG_SND_HDA_SCODEC_CS35L41_I2C=m
+CONFIG_SND_HDA_SCODEC_CS35L41_SPI=m
+CONFIG_SND_INTEL8X0=m
+CONFIG_SND_INTEL8X0M=m
+CONFIG_SND_INTEL_BYT_PREFER_SOF=n
+CONFIG_SND_INTEL_DSP_CONFIG=m
+CONFIG_SND_INTEL_NHLT=y
+CONFIG_SND_INTEL_SOUNDWIRE_ACPI=m
 CONFIG_SND_PCI=y
 CONFIG_SND_PCMCIA=n
 CONFIG_SND_SIMPLE_CARD=m
 CONFIG_SND_SIMPLE_CARD_UTILS=m
 CONFIG_SND_SOC_AC97_BUS=y
 CONFIG_SND_SOC_AC97_CODEC=m
+CONFIG_SND_SOC_AMD_ACP3x=m
+CONFIG_SND_SOC_AMD_ACP5x=m
+CONFIG_SND_SOC_AMD_ACP6x=m
+CONFIG_SND_SOC_AMD_ACP=m
+CONFIG_SND_SOC_AMD_ACP_COMMON=m
+CONFIG_SND_SOC_AMD_ACP_I2S=m
+CONFIG_SND_SOC_AMD_ACP_PCI=m
+CONFIG_SND_SOC_AMD_ACP_PCM=m
+CONFIG_SND_SOC_AMD_ACP_PDM=m
+CONFIG_SND_SOC_AMD_CZ_DA7219MX98357_MACH=m
+CONFIG_SND_SOC_AMD_CZ_RT5645_MACH=m
+CONFIG_SND_SOC_AMD_LEGACY_MACH=m
+CONFIG_SND_SOC_AMD_MACH_COMMON=m
+CONFIG_SND_SOC_AMD_RENOIR=m
+CONFIG_SND_SOC_AMD_RENOIR_MACH=m
+CONFIG_SND_SOC_AMD_RV_RT5682_MACH=m
+CONFIG_SND_SOC_AMD_SOF_MACH=m
+CONFIG_SND_SOC_AMD_VANGOGH_MACH=m
+CONFIG_SND_SOC_AMD_YC_MACH=m
+CONFIG_SND_SOC_INTEL_APL=m
+CONFIG_SND_SOC_INTEL_AVS=m
+CONFIG_SND_SOC_INTEL_BDW_RT5650_MACH=m
+CONFIG_SND_SOC_INTEL_BDW_RT5677_MACH=m
+CONFIG_SND_SOC_INTEL_BROADWELL_MACH=m
+CONFIG_SND_SOC_INTEL_BXT_DA7219_MAX98357A_COMMON=m
+CONFIG_SND_SOC_INTEL_BXT_DA7219_MAX98357A_MACH=m
+CONFIG_SND_SOC_INTEL_BXT_RT298_MACH=m
+CONFIG_SND_SOC_INTEL_BYTCR_RT5640_MACH=m
+CONFIG_SND_SOC_INTEL_BYTCR_RT5651_MACH=m
+CONFIG_SND_SOC_INTEL_BYTCR_WM5102_MACH=m
+CONFIG_SND_SOC_INTEL_BYT_CHT_CX2072X_MACH=m
+CONFIG_SND_SOC_INTEL_BYT_CHT_DA7213_MACH=m
+CONFIG_SND_SOC_INTEL_BYT_CHT_ES8316_MACH=m
+CONFIG_SND_SOC_INTEL_BYT_CHT_NOCODEC_MACH=n
+CONFIG_SND_SOC_INTEL_CATPT=m
+CONFIG_SND_SOC_INTEL_CFL=m
+CONFIG_SND_SOC_INTEL_CHT_BSW_MAX98090_TI_MACH=m
+CONFIG_SND_SOC_INTEL_CHT_BSW_NAU8824_MACH=m
+CONFIG_SND_SOC_INTEL_CHT_BSW_RT5645_MACH=m
+CONFIG_SND_SOC_INTEL_CHT_BSW_RT5672_MACH=m
+CONFIG_SND_SOC_INTEL_CML_H=m
+CONFIG_SND_SOC_INTEL_CML_LP=m
+CONFIG_SND_SOC_INTEL_CML_LP_DA7219_MAX98357A_MACH=m
+CONFIG_SND_SOC_INTEL_CNL=m
+CONFIG_SND_SOC_INTEL_DA7219_MAX98357A_GENERIC=m
+CONFIG_SND_SOC_INTEL_EHL_RT5660_MACH=m
+CONFIG_SND_SOC_INTEL_GLK=m
+CONFIG_SND_SOC_INTEL_GLK_DA7219_MAX98357A_MACH=m
+CONFIG_SND_SOC_INTEL_GLK_RT5682_MAX98357A_MACH=m
+CONFIG_SND_SOC_INTEL_HASWELL_MACH=m
+CONFIG_SND_SOC_INTEL_HDA_DSP_COMMON=m
+CONFIG_SND_SOC_INTEL_KBL=m
+CONFIG_SND_SOC_INTEL_KBL_DA7219_MAX98357A_MACH=m
+CONFIG_SND_SOC_INTEL_KBL_DA7219_MAX98927_MACH=m
+CONFIG_SND_SOC_INTEL_KBL_RT5660_MACH=m
+CONFIG_SND_SOC_INTEL_KBL_RT5663_MAX98927_MACH=m
+CONFIG_SND_SOC_INTEL_KBL_RT5663_RT5514_MAX98927_MACH=m
+CONFIG_SND_SOC_INTEL_MACH=y
+CONFIG_SND_SOC_INTEL_SKL=m
+CONFIG_SND_SOC_INTEL_SKL_HDA_DSP_GENERIC_MACH=m
+CONFIG_SND_SOC_INTEL_SKL_NAU88L25_MAX98357A_MACH=m
+CONFIG_SND_SOC_INTEL_SKL_NAU88L25_SSM4567_MACH=m
+CONFIG_SND_SOC_INTEL_SKL_RT286_MACH=m
+CONFIG_SND_SOC_INTEL_SKYLAKE=m
+CONFIG_SND_SOC_INTEL_SKYLAKE_COMMON=m
+CONFIG_SND_SOC_INTEL_SKYLAKE_FAMILY=m
+CONFIG_SND_SOC_INTEL_SKYLAKE_HDAUDIO_CODEC=y
+CONFIG_SND_SOC_INTEL_SKYLAKE_SSP_CLK=m
+CONFIG_SND_SOC_INTEL_SOF_CIRRUS_COMMON=m
+CONFIG_SND_SOC_INTEL_SOF_CML_RT1011_RT5682_MACH=m
+CONFIG_SND_SOC_INTEL_SOF_CS42L42_MACH=m
+CONFIG_SND_SOC_INTEL_SOF_DA7219_MAX98373_MACH=m
+CONFIG_SND_SOC_INTEL_SOF_ES8336_MACH=m
+CONFIG_SND_SOC_INTEL_SOF_MAXIM_COMMON=m
+CONFIG_SND_SOC_INTEL_SOF_NAU8825_MACH=m
+CONFIG_SND_SOC_INTEL_SOF_PCM512x_MACH=m
+CONFIG_SND_SOC_INTEL_SOF_REALTEK_COMMON=m
+CONFIG_SND_SOC_INTEL_SOF_RT5682_MACH=m
+CONFIG_SND_SOC_INTEL_SOF_SSP_AMP_MACH=m
+CONFIG_SND_SOC_INTEL_SOF_WM8804_MACH=m
+CONFIG_SND_SOC_INTEL_SOUNDWIRE_SOF_MACH=m
+CONFIG_SND_SOC_INTEL_SST=m
+CONFIG_SND_SOC_INTEL_SST_TOPLEVEL=y
+CONFIG_SND_SOC_INTEL_USER_FRIENDLY_LONG_NAMES=y
 CONFIG_SND_SOC_SOF=m
 CONFIG_SND_SOC_SOF_ACPI=m
 CONFIG_SND_SOC_SOF_ACPI_DEV=m
 CONFIG_SND_SOC_SOF_ALDERLAKE=m
+CONFIG_SND_SOC_SOF_AMD_COMMON=m
+CONFIG_SND_SOC_SOF_AMD_RENOIR=m
+CONFIG_SND_SOC_SOF_AMD_TOPLEVEL=m
 CONFIG_SND_SOC_SOF_APOLLOLAKE=m
 CONFIG_SND_SOC_SOF_BAYTRAIL=m
-CONFIG_SND_SOC_SOF_BROADWELL=m
+CONFIG_SND_SOC_SOF_BROADWELL=n
 CONFIG_SND_SOC_SOF_CANNONLAKE=m
+CONFIG_SND_SOC_SOF_CLIENT=m
 CONFIG_SND_SOC_SOF_COFFEELAKE=m
 CONFIG_SND_SOC_SOF_COMETLAKE=m
+CONFIG_SND_SOC_SOF_DEBUG_PROBES=m
 CONFIG_SND_SOC_SOF_ELKHARTLAKE=m
 CONFIG_SND_SOC_SOF_GEMINILAKE=m
 CONFIG_SND_SOC_SOF_HDA=m
@@ -726,6 +900,7 @@ CONFIG_SND_SOC_SOF_HDA_AUDIO_CODEC=y
 CONFIG_SND_SOC_SOF_HDA_COMMON=m
 CONFIG_SND_SOC_SOF_HDA_LINK=y
 CONFIG_SND_SOC_SOF_HDA_LINK_BASELINE=m
+CONFIG_SND_SOC_SOF_HDA_PROBES=y
 CONFIG_SND_SOC_SOF_ICELAKE=m
 CONFIG_SND_SOC_SOF_INTEL_APL=m
 CONFIG_SND_SOC_SOF_INTEL_ATOM_HIFI_EP=m
@@ -787,6 +962,7 @@ CONFIG_SUNGEM=m
 CONFIG_SUNGEM_PHY=y
 CONFIG_SYMBOLIC_ERRNAME=y
 CONFIG_SYNC_FILE=y
+CONFIG_SYSFB_SIMPLEFB=y
 CONFIG_SYSTEM_REVOCATION_KEYS=n
 CONFIG_SYSTEM_TRUSTED_KEYS=n
 CONFIG_TEHUTI=m
