kerrnel config: Make sure i2c input is enabled

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -1,8 +1,8 @@
-=
 CONFIG_64BIT_TIME=y
 CONFIG_8139CP=n
 CONFIG_8139TOO=n
 CONFIG_ACENIC=m
+CONFIG_ACPI=y
 CONFIG_ACPI_AC=y
 CONFIG_ACPI_ADXL=y
 CONFIG_ACPI_BATTERY=y
@@ -360,9 +360,12 @@ CONFIG_HYPERV_IOMMU=y
 CONFIG_HYPERV_VSOCKETS=m
 CONFIG_HZ=300
 CONFIG_HZ_300=y
+CONFIG_I2C=y
 CONFIG_I2C_AMD_MP2=m
 CONFIG_I2C_BCM2048=m
 CONFIG_I2C_DESIGNWARE_AMDPSP=y
+CONFIG_I2C_HID_ACPI=y
+CONFIG_I2C_HID_CORE=y
 CONFIG_I2C_MUX_PINCTRL=m
 CONFIG_I2C_NVIDIA_GPU=m
 CONFIG_I40E=m
@@ -376,6 +379,7 @@ CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
 CONFIG_INET=y
 CONFIG_INFTL=n
+CONFIG_INPUT=y
 CONFIG_INPUT_BMA150=m
 CONFIG_INPUT_CMA3000=m
 CONFIG_INPUT_CMA3000_I2C=m
@@ -1121,3 +1125,4 @@ CONFIG_ZRAM=m
 CONFIG_ZRAM_MEMORY_TRACKING=y
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_ZSMALLOC=y
+CONFIG_SND_AMD_ASOC_RENOIR=m
