--- a/core/modules/kernel-vanilla/module.conf
+++ b/core/modules/kernel-vanilla/module.conf
@@ -1,6 +1,8 @@
 #!/bin/bash
 REQUIRED_BINARIES=""
 REQUIRED_LIBRARIES=""
-REQUIRED_DIRECTORIES=""
+REQUIRED_DIRECTORIES="
+	/lib/firmware/intel/sof-*
+"
 REQUIRED_KERNEL="${CONFIG_KERNEL_VERSION:-"5.10.75"}"
 REQUIRED_GIT="git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable.git"
