[kernel-vanilla] Also copy sof userspace tools

--- a/core/modules/kernel-vanilla/module.conf
+++ b/core/modules/kernel-vanilla/module.conf
@@ -3,6 +3,7 @@ REQUIRED_BINARIES=""
 REQUIRED_LIBRARIES=""
 REQUIRED_DIRECTORIES="
 	/lib/firmware/intel
+	/usr/bin
 "
 REQUIRED_KERNEL="${CONFIG_KERNEL_VERSION:-"5.10.75"}"
 REQUIRED_GIT="git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable.git"
