kernel config: Enable designware slave controller, make as module

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -364,8 +364,13 @@ CONFIG_I2C=y
 CONFIG_I2C_AMD_MP2=m
 CONFIG_I2C_BCM2048=m
 CONFIG_I2C_DESIGNWARE_AMDPSP=y
-CONFIG_I2C_HID_ACPI=y
-CONFIG_I2C_HID_CORE=y
+CONFIG_I2C_DESIGNWARE_BAYTRAIL=y
+CONFIG_I2C_DESIGNWARE_CORE=m
+CONFIG_I2C_DESIGNWARE_PCI=m
+CONFIG_I2C_DESIGNWARE_PLATFORM=y
+CONFIG_I2C_DESIGNWARE_SLAVE=y
+CONFIG_I2C_HID_ACPI=m
+CONFIG_I2C_HID_CORE=m
 CONFIG_I2C_MUX_PINCTRL=m
 CONFIG_I2C_NVIDIA_GPU=m
 CONFIG_I40E=m
@@ -749,6 +754,7 @@ CONFIG_SKGE=m
 CONFIG_SKY2=m
 CONFIG_SMSC911X=n
 CONFIG_SMSC9420=n
+CONFIG_SND_AMD_ASOC_RENOIR=m
 CONFIG_SND_BCD2000=m
 CONFIG_SND_CA0106=m
 CONFIG_SND_CTXFI=m
@@ -1125,4 +1131,3 @@ CONFIG_ZRAM=m
 CONFIG_ZRAM_MEMORY_TRACKING=y
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_ZSMALLOC=y
-CONFIG_SND_AMD_ASOC_RENOIR=m
