kernel config: Enable USB-C DP alternate mode module

--- a/data/kernel.wanted.config
+++ b/data/kernel.wanted.config
@@ -988,6 +988,8 @@ CONFIG_TTY_PRINTK=y
 CONFIG_TTY_PRINTK_LEVEL=6
 CONFIG_TULIP=n
 CONFIG_TUN=y
+CONFIG_TYPEC=m
+CONFIG_TYPEC_DP_ALTMODE=m
 CONFIG_TYPHOON=m
 CONFIG_UDMABUF=y
 CONFIG_UIO=y
